Rewrite expert agreement for clarity and brevity
Replaces the previous expert agreement in Portuguese, English, and Spanish with a much shorter, plain-language version. The new agreement is organized into concise sections covering professional status, requirements, data roles, platform services, pricing, patient relationship, prohibited conduct, termination, liability, intellectual property, confidentiality, and legal terms. The update aims to improve clarity, reduce legalese, and make the agreement easier for professionals to understand and accept.

--- a/content/expert-agreement/en.mdx
+++ b/content/expert-agreement/en.mdx
@@ -1,561 +1,82 @@
 # Expert Service Agreement
 
-_Effective Date:_ April 16, 2025
+_Effective Date: April 16, 2025_
 
-This Expert Service Agreement ("Agreement") is between **Búzios e Tartarugas, Lda.**, operating as **Eleva.care** ("Eleva.care," "we," "us," or "our"), and you, the independent healthcare expert ("Expert," "you," or "your").
+Welcome to Eleva.care. This agreement explains, in plain language, how we work together when you offer services on our platform.
 
-By creating an expert account and using our platform services, you agree to be bound by this Agreement.
+## 1) Your status (independent professional)
 
----
+- You are an independent, licensed healthcare professional—not our employee, partner, or agent
+- You run your own practice: schedule, rates, policies, taxes, insurance, and regulatory compliance are yours to manage
+- We don’t supervise your clinical decisions or provide medical services
 
-## IMPORTANT: Platform Nature
+## 2) Professional requirements
 
-**Eleva.care is a technology marketplace platform**, NOT a healthcare provider, medical practice, or clinic. We provide technology services that enable you to connect with patients and manage your independent healthcare practice. You are NOT an employee of Eleva.care.
+- Keep your license(s) valid and in good standing; tell us if anything changes
+- Maintain professional liability (malpractice) insurance (keep proof available)
+- Provide care consistent with law, ethics, informed consent, and clinical standards; keep accurate records and protect privacy
 
----
+## 3) Data roles (GDPR/LGPD)
 
-## 1. Independent Contractor Status
+- For clinical notes/files you create, you are the Data Controller; Eleva.care is your Data Processor
+- We store data securely and act only on your documented instructions; we provide encryption, access controls, audit, and breach notice
+- You handle patient notices/consents, data subject requests, and retention rules for medical records
+- See our DPA and Security pages for subprocessors and safeguards
 
-### 1.1 Independent Professional
+## 4) Platform services (what we provide)
 
-You acknowledge and agree that:
+- Profile, availability, booking and scheduling tools
+- Encrypted storage for your notes/files (you control content)
+- Payments via Stripe Connect; patient messaging and notifications
+- Technical support, plus GDPR assistance (when appropriate)
 
-- ✅ You are an **independent healthcare professional**, not an Eleva.care employee, agent, or partner
-- ✅ You are solely responsible for all aspects of your healthcare practice
-- ✅ You maintain your own professional licenses, credentials, and certifications
-- ✅ Eleva.care has NO authority to supervise, direct, or control your medical practice
-- ✅ Eleva.care is NOT responsible for your clinical decisions, diagnoses, or treatment plans
-- ✅ You set your own schedule, rates, and practice policies
+We do not provide medical advice or supervision, verify your credentials (you self‑declare), provide malpractice insurance, referrals, or billing/coding services.
 
-### 1.2 No Employment Relationship
+## 5) Pricing, fees, and payouts
 
-This Agreement does NOT create:
+- You set your prices
+- For each completed appointment: 85% to you, 15% platform fee (covers Stripe fees and platform costs)
+- Payouts run through Stripe Connect, timing per your settings and bank rules
+- You handle your taxes (income, VAT if applicable, social contributions). We provide transaction history and annual earnings summary
 
-- ❌ An employer-employee relationship
-- ❌ A partnership or joint venture
-- ❌ An agency relationship
-- ❌ Any form of employment contract
+## 6) Patient relationship and care standards
 
-You are responsible for:
+- Your relationship is directly with the patient; obtain informed consent and maintain confidentiality
+- The platform is not for emergencies; communicate appropriate emergency guidance (EU: 112, US: 911)
+- Follow telehealth rules where relevant (licensing, location checks, standard of care)
 
-- Your own taxes (income tax, VAT, social security contributions)
-- Your own professional insurance
-- Your own business expenses
-- Your own compliance with local healthcare regulations
+## 7) Prohibited behavior
 
----
+- Don’t misrepresent credentials, practice beyond your scope, violate privacy, engage in misconduct/illegal activity, bypass platform payments, or solicit off‑platform to avoid fees
+- Violations may lead to suspension or termination
 
-## 2. Professional Requirements
+## 8) Term and termination
 
-### 2.1 Licensing and Credentials
+- Starts when your practitioner account is created and continues until either of us ends it
+- You can close your account; complete/cancel booked visits and meet record‑keeping duties
+- We may suspend/terminate for license issues, fraud/illegality, serious misconduct, or policy breaches
+- Upon termination, we provide an export of your data; you remain responsible for legally required retention
 
-You represent and warrant that you:
+## 9) Liability
 
-- ✅ Hold a **valid, current healthcare license** in good standing in your jurisdiction
-- ✅ Are legally authorized to provide healthcare services
-- ✅ Will maintain all required licenses, certifications, and credentials
-- ✅ Will immediately notify Eleva.care of any license suspension, revocation, or disciplinary action
-- ✅ Will provide proof of licensing upon request
+- You are solely responsible for the care you provide and for maintaining required insurance
+- Eleva.care’s responsibility is limited to operating the technology platform and reasonable security measures
+- You agree to indemnify Eleva.care for claims arising from your medical practice, regulatory breaches, or violations of this agreement
 
-**Failure to maintain valid licensing is grounds for immediate account suspension or termination.**
+## 10) IP, confidentiality, and notices
 
-### 2.2 Professional Liability Insurance
+- Eleva.care owns the platform; you own your clinical notes, profile, and materials
+- You grant us permission to display your profile and store/backup your data; we may use aggregated, anonymized data to improve the platform
+- Keep business/technical information confidential; follow healthcare privacy laws for patient data
+- Notices: support@eleva.care (legal: legal@eleva.care, DPO: dpo@eleva.care)
 
-You must maintain:
+## 11) Updates, law, and disputes
 
-- ✅ **Professional medical malpractice insurance** with minimum coverage as required in your jurisdiction
-- ✅ Coverage must remain active throughout your use of the platform
-- ✅ You must provide proof of insurance upon request
-- ✅ You must notify Eleva.care immediately if coverage lapses
-
-**Recommended minimum coverage**: €1,000,000 per claim / €3,000,000 aggregate (or equivalent in your currency)
-
-### 2.3 Professional Conduct
-
-You agree to:
-
-- ✅ Comply with all applicable healthcare laws and regulations
-- ✅ Follow professional ethical standards and codes of conduct
-- ✅ Maintain patient confidentiality and privacy
-- ✅ Provide care consistent with accepted professional standards
-- ✅ Obtain informed consent from patients before providing services
-- ✅ Maintain accurate and complete medical records
+- We may update this agreement; we’ll provide notice and request acceptance for material changes
+- Governing law: Portugal. Disputes: good‑faith negotiation → mediation → courts of Portugal
 
 ---
 
-## 3. Data Processing Responsibilities
+By offering services on Eleva.care, you confirm you are licensed, insured, and agree to these terms as an independent professional.
 
-### 3.1 Your Role as Data Controller
-
-**IMPORTANT**: For clinical data you create (session notes, medical records, patient health information):
-
-- 🟦 **YOU are the Data Controller** under GDPR Article 4(7)
-- 🟧 **Eleva.care is the Data Processor** under GDPR Article 28
-
-This means:
-
-- ✅ **You determine** the purposes and means of processing patient health data
-- ✅ **You are responsible** for obtaining patient consent (GDPR Article 9(2)(h))
-- ✅ **You must respond** to patient data subject access requests (within 30 days)
-- ✅ **You are responsible** for GDPR compliance regarding clinical data
-- ✅ **You must notify** Eleva.care immediately of any suspected data breaches
-
-### 3.2 Eleva.care as Data Processor (Article 28 GDPR)
-
-When you use Eleva.care to store clinical data, we act as your data processor and commit to:
-
-**Security Measures**:
-
-- ✅ AES-256-GCM encryption at rest
-- ✅ TLS 1.3 encryption in transit
-- ✅ Role-based access controls (RBAC)
-- ✅ Regular security audits and monitoring
-
-**Data Processing Obligations**:
-
-- ✅ Process data ONLY on your documented instructions
-- ✅ Ensure confidentiality of persons processing data
-- ✅ Notify you of data breaches within 24 hours
-- ✅ Assist with data subject access requests
-- ✅ Delete or return data upon contract termination or your request
-- ✅ Make available all information necessary to demonstrate compliance
-
-**Subprocessors** (EU-hosted):
-
-| Subprocessor | Service             | Location                | Purpose                |
-| ------------ | ------------------- | ----------------------- | ---------------------- |
-| Neon Inc.    | PostgreSQL Database | Frankfurt, Germany (EU) | Encrypted data storage |
-| Vercel Inc.  | Hosting & CDN       | EU Regions              | Application hosting    |
-| Upstash Inc. | Redis Cache         | EU Regions              | Session management     |
-| Resend       | Email Delivery      | Dublin, Ireland (EU)    | Transactional emails   |
-
-All subprocessors have executed:
-
-- Standard Contractual Clauses (SCCs)
-- Data Processing Agreements (DPAs)
-- EU data residency commitments
-
-### 3.3 Patient Consent
-
-You are responsible for obtaining patient consent, including:
-
-- ✅ Consent for healthcare services you provide
-- ✅ Consent for processing health data (GDPR Article 9(2)(a) and 9(2)(h))
-- ✅ Consent for storing data on Eleva.care platform
-- ✅ Informed consent forms compliant with GDPR
-
-**Eleva.care provides**: Template consent forms as a value-add service (optional to use)
-
-### 3.4 Data Retention
-
-Under Portuguese healthcare regulations:
-
-- Medical records must be retained for **10 years** from last patient contact
-- You are responsible for ensuring compliance with retention periods
-- You may request data deletion after legal retention periods expire
-- Eleva.care will assist with retention period management upon request
-
----
-
-## 4. Medical Liability and Indemnification
-
-### 4.1 Your Medical Liability
-
-You acknowledge and agree that:
-
-- ✅ **You are solely responsible** for all medical care, diagnoses, and treatment you provide
-- ✅ **You assume all liability** for medical outcomes and professional negligence
-- ✅ **Eleva.care has NO liability** for your medical practice or patient outcomes
-- ✅ **You maintain professional malpractice insurance** as required
-
-### 4.2 Indemnification
-
-You agree to **indemnify, defend, and hold harmless** Eleva.care, its officers, directors, employees, and affiliates from any claims, damages, liabilities, costs, and expenses (including reasonable attorneys' fees) arising from or related to:
-
-- Your medical practice or healthcare services
-- Medical malpractice or professional negligence
-- Breach of this Agreement
-- Violation of any laws or regulations
-- Infringement of third-party rights
-- Your failure to obtain patient consent
-- Your failure to maintain required licenses or insurance
-
-### 4.3 Platform Liability
-
-Eleva.care's liability is limited to:
-
-- ✅ Performance of our technology platform services
-- ✅ Data security measures (encryption, access controls)
-- ✅ Platform availability and uptime (per SLA)
-
-Eleva.care is NOT liable for:
-
-- ❌ Medical outcomes or patient health
-- ❌ Your professional conduct or competence
-- ❌ Your licensing or credential issues
-- ❌ Practitioner-patient disputes (medical)
-- ❌ Lost income or business opportunities
-
----
-
-## 5. Platform Services Provided by Eleva.care
-
-### 5.1 Technology Services We Provide
-
-Eleva.care provides the following technology platform services:
-
-**Account & Profile Management**:
-
-- Professional profile creation and editing
-- Credential display (self-reported by you)
-- Availability calendar management
-
-**Booking & Scheduling**:
-
-- Patient booking system
-- Appointment scheduling tools
-- Calendar integration support
-
-**Clinical Data Storage** (encrypted):
-
-- Session notes storage (you control content)
-- File attachment storage (future)
-- Secure backup and recovery
-
-**Payment Processing**:
-
-- Stripe Connect integration
-- Payment collection from patients
-- Automatic payouts to your bank account
-- Transaction history and reporting
-
-**Communication Tools**:
-
-- Secure messaging with patients
-- Email notifications
-- Appointment reminders (automated)
-
-**Support Services**:
-
-- Platform technical support (support@eleva.care)
-- GDPR compliance assistance (dpo@eleva.care)
-- Platform training and onboarding
-
-### 5.2 What We Do NOT Provide
-
-- ❌ Medical advice or clinical supervision
-- ❌ Verification of your credentials (you self-certify)
-- ❌ Professional liability insurance
-- ❌ Patient referrals or guarantees of bookings
-- ❌ Medical record management (we provide storage only)
-- ❌ Billing or coding assistance
-- ❌ Legal or tax advice
-
----
-
-## 6. Payment Terms and Commission
-
-### 6.1 Commission Structure
-
-For each completed appointment booked through Eleva.care:
-
-- **Platform Commission**: 15% of the session fee
-- **You receive**: 85% of the session fee
-- **Payment processing**: Via Stripe; Stripe fees are covered within Eleva.care's 15% platform commission
-
-**Example**:
-
-- Session fee: €100
-- Eleva.care commission (includes Stripe fees): €15 (15%)
-- Your payout: €85.00
-
-### 6.2 Payout Schedule
-
-- **Frequency**: Weekly (every Monday)
-- **Method**: Direct bank transfer via Stripe Connect
-- **Minimum payout**: €10
-- **Currency**: EUR (or your local currency via Stripe)
-
-### 6.3 Refund Policy
-
-If a patient requests a refund:
-
-- You must handle refund decisions (you control pricing and policies)
-- If refund approved: Full amount refunded to patient (including our commission)
-- You may set your own cancellation and refund policies
-- Eleva.care will assist with processing refunds through Stripe
-
-### 6.4 Tax Responsibilities
-
-You are responsible for:
-
-- ✅ All income taxes on earnings from the platform
-- ✅ VAT registration and compliance (if applicable)
-- ✅ Social security contributions
-- ✅ Annual tax declarations
-
-Eleva.care will provide:
-
-- ✅ Annual earnings summary (for tax purposes)
-- ✅ Transaction history access
-- ❌ We do NOT provide tax advice (consult your accountant)
-
----
-
-## 7. Patient Relationship and Care Standards
-
-### 7.1 Direct Practitioner-Patient Relationship
-
-You acknowledge that:
-
-- Your relationship is directly with the patient (NOT Eleva.care)
-- You are responsible for quality of care
-- You must obtain informed consent before treatment
-- You must maintain patient confidentiality
-- Eleva.care is NOT a party to your patient relationships
-
-### 7.2 Emergency Care Disclaimer
-
-**Eleva.care platform is NOT for medical emergencies.**
-
-You must:
-
-- ✅ Inform patients that platform is not for emergencies
-- ✅ Provide emergency contact information (EU: 112, USA: 911)
-- ✅ Establish emergency protocols with patients
-- ✅ NOT use platform for urgent or life-threatening situations
-
-### 7.3 Telehealth Compliance
-
-If you provide telehealth services:
-
-- ✅ You must comply with telehealth regulations in your jurisdiction
-- ✅ You must verify patient location before providing cross-border care
-- ✅ You must maintain appropriate telehealth licensing
-- ✅ You are responsible for telehealth standard of care
-
----
-
-## 8. Prohibited Conduct
-
-You agree NOT to:
-
-- ❌ Misrepresent your qualifications or credentials
-- ❌ Practice outside your scope of license
-- ❌ Provide services while license is suspended or revoked
-- ❌ Violate patient confidentiality
-- ❌ Engage in professional misconduct
-- ❌ Use platform for illegal or fraudulent activities
-- ❌ Bypass platform payment system (direct patient payments)
-- ❌ Solicit patients to use services outside the platform to avoid fees
-- ❌ Share your account access with others
-- ❌ Use automated tools or bots to manipulate platform
-
-**Violation may result in account suspension or permanent termination.**
-
----
-
-## 9. Term and Termination
-
-### 9.1 Agreement Term
-
-This Agreement begins when you create your practitioner account and continues until terminated by either party.
-
-### 9.2 Termination by You
-
-You may terminate this Agreement at any time by:
-
-- Providing 30 days written notice to support@eleva.care
-- Closing your practitioner account
-- Completing or canceling all scheduled appointments
-
-Upon termination, you remain responsible for:
-
-- Completing scheduled appointments (or providing reasonable notice to patients)
-- Outstanding payments owed to Eleva.care
-- Patient data retention obligations (10-year rule)
-
-### 9.3 Termination by Eleva.care
-
-We may terminate or suspend your account:
-
-- **Immediately** for: License revocation, fraud, illegal activity, serious misconduct
-- **With 30 days notice** for: Breach of Agreement, policy violations, business reasons
-
-### 9.4 Effect of Termination
-
-Upon termination:
-
-- ✅ You lose access to platform features
-- ✅ Patient bookings are canceled (with notice to patients)
-- ✅ Outstanding payments are processed
-- ✅ **Clinical data**: We will provide export of your data (you must retain for 10 years)
-- ✅ Platform data: We may retain for legal compliance purposes
-
-### 9.5 Data Export Upon Termination
-
-You may request:
-
-- Export of all clinical notes and patient data (encrypted)
-- Transaction history and financial records
-- Patient contact information (if consented)
-
-We will provide data export within 30 days of termination.
-
----
-
-## 10. Intellectual Property
-
-### 10.1 Platform Ownership
-
-All platform technology, software, designs, trademarks, and intellectual property are owned by Eleva.care. You receive a limited, non-exclusive, non-transferable license to use the platform during the term of this Agreement.
-
-### 10.2 Your Content
-
-You retain ownership of:
-
-- Your clinical notes and medical records
-- Your professional profile content
-- Your educational materials
-
-By using the platform, you grant Eleva.care a license to:
-
-- Display your profile to patients
-- Store and backup your data securely
-- Use aggregated, anonymized data for platform improvements
-
----
-
-## 11. Confidentiality
-
-### 11.1 Mutual Confidentiality
-
-Both parties agree to maintain confidentiality of:
-
-- Business operations and strategies
-- Technical information and platform details
-- Financial information
-- User data and analytics
-
-### 11.2 Patient Confidentiality
-
-You must maintain patient confidentiality in accordance with:
-
-- GDPR (EU Regulation 2016/679)
-- Portuguese healthcare privacy laws
-- Professional ethical standards
-- HIPAA (if providing services to US patients)
-
----
-
-## 12. Amendments and Updates
-
-Eleva.care may update this Agreement by:
-
-- Providing 30 days notice via email
-- Posting updated Agreement on platform
-- Obtaining your acceptance for material changes
-
-Continued use of platform after changes constitutes acceptance.
-
----
-
-## 13. Governing Law and Dispute Resolution
-
-### 13.1 Governing Law
-
-This Agreement is governed by the laws of **Portugal**.
-
-### 13.2 Dispute Resolution
-
-Disputes shall be resolved:
-
-1. **First**: Good faith negotiation (30 days)
-2. **Second**: Mediation (if negotiation fails)
-3. **Third**: Courts of Portugal (if mediation fails)
-
-### 13.3 Limitation Period
-
-Claims must be brought within **2 years** of the event giving rise to the claim.
-
----
-
-## 14. General Provisions
-
-### 14.1 Entire Agreement
-
-This Agreement constitutes the entire agreement between parties and supersedes all prior agreements or understandings.
-
-### 14.2 Severability
-
-If any provision is invalid or unenforceable, the remaining provisions remain in full effect.
-
-### 14.3 Waiver
-
-Failure to enforce any provision does not waive our right to enforce it later.
-
-### 14.4 Assignment
-
-You may NOT assign this Agreement without our written consent. We may assign this Agreement to a successor or affiliate.
-
-### 14.5 Notices
-
-All notices must be sent to:
-
-**To Eleva.care**:
-
-- Email: support@eleva.care
-- Address: Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-
-**To You**:
-
-- Email provided in your account
-
-### 14.6 Force Majeure
-
-Neither party is liable for delays or failures due to circumstances beyond reasonable control (natural disasters, war, pandemics, etc.).
-
----
-
-## 15. Acknowledgment and Acceptance
-
-By creating a practitioner account on Eleva.care, you acknowledge that you have:
-
-- ✅ Read and understood this Agreement
-- ✅ Agree to be bound by all terms and conditions
-- ✅ Confirm you are a licensed healthcare professional
-- ✅ Confirm you maintain professional liability insurance
-- ✅ Understand you are an independent contractor, NOT an employee
-- ✅ Understand your data controller responsibilities under GDPR
-- ✅ Agree to indemnify Eleva.care for medical malpractice claims
-
----
-
-## Legal Information
-
-**Platform Operator**:
-
-- **Legal Entity**: BÚZIOS E TARTARUGAS - LDA
-- **Commercial Name**: Eleva.care
-- **NIPC/VAT**: PT515001708
-- **Legal Form**: Sociedade por Quotas (LDA)
-- **Registered Office**: Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Managing Director**: Rodrigo Barona Oliete
-- **Email**: support@eleva.care
-- **Phone**: +351 931 897 950
-- **Data Protection Officer**: dpo@eleva.care
-
----
-
-## Questions or Concerns?
-
-**Technical Support**: support@eleva.care  
-**Legal Questions**: legal@eleva.care  
-**Data Protection**: dpo@eleva.care  
-**Business Development**: partnerships@eleva.care
-
----
-
-**Thank you for partnering with Eleva.care to make quality healthcare more accessible!**
-
-_Last Updated: April 16, 2025_
+Operator: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/VAT 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Support `support@eleva.care`, Legal `legal@eleva.care`, DPO `dpo@eleva.care`.
