--- a/content/expert-agreement/pt.mdx
+++ b/content/expert-agreement/pt.mdx
@@ -1,561 +1,82 @@
-# Acordo de Serviço para Especialistas
+# Acordo de Serviços para Especialistas
 
-_Data de Vigência:_ 16 de abril de 2025
+_Data de vigência: 16 de abril de 2025_
 
-Este Acordo de Serviço para Especialistas ("Acordo") é celebrado entre **Búzios e Tartarugas, Lda.**, operando como **Eleva.care** ("Eleva.care," "nós," ou "nosso"), e você, o especialista de saúde independente ("Especialista," "você," ou "seu").
+Bem‑vindo(a) à Eleva.care. Este acordo explica, em linguagem simples, como colaboramos quando presta serviços na plataforma.
 
-Ao criar uma conta de especialista e utilizar os nossos serviços da plataforma, concorda em estar vinculado por este Acordo.
+## 1) O seu estatuto (profissional independente)
 
----
+- É um profissional de saúde independente e licenciado—não é nosso(a) empregado(a), parceiro(a) ou agente
+- Gere a sua prática: agenda, preços, políticas, impostos, seguros e conformidade regulatória
+- Não supervisionamos as suas decisões clínicas nem prestamos serviços médicos
 
-## IMPORTANTE: Natureza da Plataforma
+## 2) Requisitos profissionais
 
-**A Eleva.care é uma plataforma marketplace de tecnologia**, NÃO é um prestador de cuidados de saúde, clínica médica ou consultório. Fornecemos serviços tecnológicos que lhe permitem conectar-se com pacientes e gerir a sua prática de saúde independente. Você NÃO é um funcionário da Eleva.care.
+- Mantenha a(s) licença(s) válida(s) e em boa situação; informe alterações
+- Mantenha seguro de responsabilidade profissional (apresente comprovativo quando solicitado)
+- Preste cuidados conforme a lei, ética, consentimento informado e padrões clínicos; registe e proteja a privacidade
 
----
+## 3) Papéis de dados (RGPD/LGPD)
 
-## 1. Status de Prestador Independente
+- Para notas/ficheiros clínicos que cria, é Responsável pelo Tratamento; a Eleva.care é Subcontratante
+- Armazenamos dados com segurança e atuamos apenas mediante instruções documentadas; cifragem, controlos de acesso, auditoria e aviso de incidentes
+- O(a) especialista gere avisos/consentimentos, pedidos dos titulares e retenção de registos clínicos
+- Veja o nosso DPA e a página de Segurança para subprocessadores e salvaguardas
 
-### 1.1 Profissional Independente
+## 4) Serviços de plataforma (o que fornecemos)
 
-Você reconhece e concorda que:
+- Perfil, disponibilidade, marcações e agendamento
+- Armazenamento cifrado para notas/ficheiros (controle do conteúdo é seu)
+- Pagamentos via Stripe Connect; mensagens a pacientes e notificações
+- Suporte técnico e assistência RGPD quando aplicável
 
-- ✅ Você é um **profissional de saúde independente**, não um funcionário, agente ou parceiro da Eleva.care
-- ✅ Você é o único responsável por todos os aspetos da sua prática de saúde
-- ✅ Você mantém as suas próprias licenças profissionais, credenciais e certificações
-- ✅ A Eleva.care NÃO tem autoridade para supervisionar, dirigir ou controlar a sua prática médica
-- ✅ A Eleva.care NÃO é responsável pelas suas decisões clínicas, diagnósticos ou planos de tratamento
-- ✅ Você define os seus próprios horários, tarifas e políticas de prática
+Não fornecemos conselho médico nem supervisão, não verificamos credenciais (auto‑declaração), não oferecemos seguro de responsabilidade, referenciações nem serviços de faturação/codificação.
 
-### 1.2 Sem Relação de Emprego
+## 5) Preços, comissões e pagamentos
 
-Este Acordo NÃO cria:
+- Define os seus preços
+- Por cada consulta concluída: 85% para si, 15% taxa de plataforma (inclui Stripe e custos de plataforma)
+- Pagamentos via Stripe Connect; prazos segundo configurações e regras bancárias
+- O(a) especialista gere os seus impostos. Fornecemos histórico de transações e resumo anual de rendimentos
 
-- ❌ Uma relação empregador-empregado
-- ❌ Uma parceria ou joint venture
-- ❌ Uma relação de agência
-- ❌ Qualquer forma de contrato de trabalho
+## 6) Relação com pacientes e padrões de cuidados
 
-Você é responsável por:
+- A relação é diretamente consigo; obtenha consentimento informado e mantenha confidencialidade
+- A plataforma não é para emergências; comunique orientação adequada (UE: 112, EUA: 911)
+- Siga regras de telemedicina quando aplicável (licenças, verificação de localização, padrão de cuidado)
 
-- Os seus próprios impostos (IRS, IVA, contribuições para a segurança social)
-- O seu próprio seguro profissional
-- As suas próprias despesas comerciais
-- O seu próprio cumprimento dos regulamentos locais de saúde
+## 7) Condutas proibidas
 
----
+- Não falseie credenciais, não atue fora do âmbito, não viole privacidade, nem pratique atos ilícitos; não contorne pagamentos da plataforma nem capte fora da plataforma para evitar taxas
+- Violações podem levar a suspensão ou cessação
 
-## 2. Requisitos Profissionais
+## 8) Vigência e cessação
 
-### 2.1 Licenciamento e Credenciais
+- Inicia com a criação da conta e mantém‑se até cessação por qualquer das partes
+- Pode encerrar a conta; complete/cancele marcações e cumpra a retenção de registos
+- Podemos suspender/cessar por licenças, fraude/ilegalidade, má conduta grave ou incumprimentos
+- Após cessação, disponibilizamos exportação dos seus dados; mantém responsabilidade pela retenção legal
 
-Você declara e garante que:
+## 9) Responsabilidade
 
-- ✅ Possui uma **licença de saúde válida e atual** em boa situação na sua jurisdição
-- ✅ Está legalmente autorizado a prestar serviços de saúde
-- ✅ Manterá todas as licenças, certificações e credenciais necessárias
-- ✅ Notificará imediatamente a Eleva.care de qualquer suspensão, revogação ou ação disciplinar da licença
-- ✅ Fornecerá comprovativo de licenciamento mediante solicitação
+- É exclusivamente responsável pelos cuidados prestados e por manter o seguro exigido
+- A Eleva.care limita‑se a operar a plataforma tecnológica e medidas razoáveis de segurança
+- Indemniza a Eleva.care por reclamações decorrentes da sua prática, incumprimentos regulatórios ou deste acordo
 
-**A falha em manter um licenciamento válido é motivo para suspensão ou rescisão imediata da conta.**
+## 10) PI, confidencialidade e avisos
 
-### 2.2 Seguro de Responsabilidade Profissional
+- A Eleva.care detém a plataforma; o(a) especialista detém notas clínicas, perfil e materiais
+- Autoriza exibir o seu perfil e armazenar/copiar em segurança os seus dados; podemos usar dados agregados/anonimizados para melhorias
+- Mantenha confidencialidade de informação de negócio/técnica; cumpra a privacidade na saúde
+- Avisos: support@eleva.care (legal: legal@eleva.care, DPO: dpo@eleva.care)
 
-Você deve manter:
+## 11) Atualizações, lei e litígios
 
-- ✅ **Seguro de responsabilidade profissional médica** com cobertura mínima conforme exigido na sua jurisdição
-- ✅ A cobertura deve permanecer ativa durante todo o uso da plataforma
-- ✅ Você deve fornecer comprovativo de seguro mediante solicitação
-- ✅ Você deve notificar a Eleva.care imediatamente se a cobertura expirar
-
-**Cobertura mínima recomendada**: €1.000.000 por sinistro / €3.000.000 agregado (ou equivalente na sua moeda)
-
-### 2.3 Conduta Profissional
-
-Você concorda em:
-
-- ✅ Cumprir com todas as leis e regulamentos de saúde aplicáveis
-- ✅ Seguir os padrões éticos profissionais e códigos de conduta
-- ✅ Manter a confidencialidade e privacidade do paciente
-- ✅ Fornecer cuidados consistentes com os padrões profissionais aceites
-- ✅ Obter consentimento informado dos pacientes antes de fornecer serviços
-- ✅ Manter registos médicos precisos e completos
+- Podemos atualizar este acordo; notificamos e pedimos aceitação para alterações materiais
+- Lei aplicável: Portugal. Litígios: negociação de boa‑fé → mediação → tribunais de Portugal
 
 ---
 
-## 3. Responsabilidades de Processamento de Dados
+Ao prestar serviços na Eleva.care, confirma que está licenciado(a), segurado(a) e aceita estes termos como profissional independente.
 
-### 3.1 O Seu Papel como Responsável pelo Tratamento
-
-**IMPORTANTE**: Para os dados clínicos que você cria (notas de sessão, registos médicos, informações de saúde do paciente):
-
-- 🟦 **VOCÊ é o Responsável pelo Tratamento** sob o Artigo 4(7) do RGPD
-- 🟧 **A Eleva.care é o Subcontratante** sob o Artigo 28 do RGPD
-
-Isto significa:
-
-- ✅ **Você determina** os propósitos e meios de processamento dos dados de saúde do paciente
-- ✅ **Você é responsável** por obter o consentimento do paciente (Artigo 9(2)(h) do RGPD)
-- ✅ **Você deve responder** aos pedidos de acesso aos dados do titular (dentro de 30 dias)
-- ✅ **Você é responsável** pela conformidade com o RGPD relativamente aos dados clínicos
-- ✅ **Você deve notificar** a Eleva.care imediatamente de qualquer suspeita de violação de dados
-
-### 3.2 Eleva.care como Subcontratante (Artigo 28 do RGPD)
-
-Quando você usa a Eleva.care para armazenar dados clínicos, agimos como seu subcontratante e comprometemo-nos a:
-
-**Medidas de Segurança**:
-
-- ✅ Encriptação AES-256-GCM em repouso
-- ✅ Encriptação TLS 1.3 em trânsito
-- ✅ Controlos de acesso baseados em funções (RBAC)
-- ✅ Auditorias e monitorização de segurança regulares
-
-**Obrigações de Processamento de Dados**:
-
-- ✅ Processar dados APENAS sob as suas instruções documentadas
-- ✅ Garantir a confidencialidade das pessoas que processam dados
-- ✅ Notificá-lo de violações de dados dentro de 24 horas
-- ✅ Assistir com pedidos de acesso aos dados do titular
-- ✅ Eliminar ou devolver dados após rescisão do contrato ou mediante o seu pedido
-- ✅ Disponibilizar todas as informações necessárias para demonstrar conformidade
-
-**Subcontratantes** (hospedados na UE):
-
-| Subcontratante | Serviço                  | Localização              | Propósito                          |
-| -------------- | ------------------------ | ------------------------ | ---------------------------------- |
-| Neon Inc.      | Base de Dados PostgreSQL | Frankfurt, Alemanha (UE) | Armazenamento de dados encriptados |
-| Vercel Inc.    | Hospedagem & CDN         | Regiões da UE            | Hospedagem de aplicações           |
-| Upstash Inc.   | Cache Redis              | Regiões da UE            | Gestão de sessões                  |
-| Resend         | Entrega de Email         | Dublin, Irlanda (UE)     | Emails transacionais               |
-
-Todos os subcontratantes executaram:
-
-- Cláusulas Contratuais Padrão (SCCs)
-- Acordos de Processamento de Dados (DPAs)
-- Compromissos de residência de dados na UE
-
-### 3.3 Consentimento do Paciente
-
-Você é responsável por obter o consentimento do paciente, incluindo:
-
-- ✅ Consentimento para os serviços de saúde que você fornece
-- ✅ Consentimento para processamento de dados de saúde (Artigos 9(2)(a) e 9(2)(h) do RGPD)
-- ✅ Consentimento para armazenamento de dados na plataforma Eleva.care
-- ✅ Formulários de consentimento informado em conformidade com o RGPD
-
-**A Eleva.care fornece**: Modelos de formulários de consentimento como serviço de valor acrescentado (opcional de usar)
-
-### 3.4 Retenção de Dados
-
-Sob os regulamentos de saúde portugueses:
-
-- Os registos médicos devem ser retidos por **10 anos** desde o último contacto com o paciente
-- Você é responsável por garantir o cumprimento dos períodos de retenção
-- Você pode solicitar a eliminação de dados após os períodos legais de retenção expirarem
-- A Eleva.care assistirá na gestão dos períodos de retenção mediante solicitação
-
----
-
-## 4. Responsabilidade Médica e Indemnização
-
-### 4.1 A Sua Responsabilidade Médica
-
-Você reconhece e concorda que:
-
-- ✅ **Você é o único responsável** por todos os cuidados médicos, diagnósticos e tratamento que fornece
-- ✅ **Você assume toda a responsabilidade** pelos resultados médicos e negligência profissional
-- ✅ **A Eleva.care NÃO tem responsabilidade** pela sua prática médica ou resultados do paciente
-- ✅ **Você mantém seguro de responsabilidade profissional médica** conforme exigido
-
-### 4.2 Indemnização
-
-Você concorda em **indemnizar, defender e isentar de responsabilidade** a Eleva.care, seus diretores, administradores, funcionários e afiliados de quaisquer reclamações, danos, responsabilidades, custos e despesas (incluindo honorários advocatícios razoáveis) decorrentes de ou relacionados com:
-
-- A sua prática médica ou serviços de saúde
-- Negligência médica ou negligência profissional
-- Violação deste Acordo
-- Violação de quaisquer leis ou regulamentos
-- Violação de direitos de terceiros
-- A sua falha em obter consentimento do paciente
-- A sua falha em manter licenças ou seguros exigidos
-
-### 4.3 Responsabilidade da Plataforma
-
-A responsabilidade da Eleva.care está limitada a:
-
-- ✅ Desempenho dos nossos serviços de plataforma tecnológica
-- ✅ Medidas de segurança de dados (encriptação, controlos de acesso)
-- ✅ Disponibilidade e tempo de atividade da plataforma (conforme SLA)
-
-A Eleva.care NÃO é responsável por:
-
-- ❌ Resultados médicos ou saúde do paciente
-- ❌ A sua conduta ou competência profissional
-- ❌ Problemas de licenciamento ou credenciais
-- ❌ Disputas profissional-paciente (médicas)
-- ❌ Perda de rendimento ou oportunidades de negócio
-
----
-
-## 5. Serviços da Plataforma Fornecidos pela Eleva.care
-
-### 5.1 Serviços Tecnológicos que Fornecemos
-
-A Eleva.care fornece os seguintes serviços de plataforma tecnológica:
-
-**Gestão de Conta e Perfil**:
-
-- Criação e edição de perfil profissional
-- Exibição de credenciais (auto-declaradas por você)
-- Gestão de calendário de disponibilidade
-
-**Marcação e Agendamento**:
-
-- Sistema de marcação de pacientes
-- Ferramentas de agendamento de consultas
-- Suporte de integração de calendário
-
-**Armazenamento de Dados Clínicos** (encriptado):
-
-- Armazenamento de notas de sessão (você controla o conteúdo)
-- Armazenamento de anexos de ficheiros (futuro)
-- Cópia de segurança e recuperação seguras
-
-**Processamento de Pagamentos**:
-
-- Integração Stripe Connect
-- Cobrança de pagamentos de pacientes
-- Pagamentos automáticos para a sua conta bancária
-- Histórico de transações e relatórios
-
-**Ferramentas de Comunicação**:
-
-- Mensagens seguras com pacientes
-- Notificações por email
-- Lembretes de consultas (automatizados)
-
-**Serviços de Suporte**:
-
-- Suporte técnico da plataforma (support@eleva.care)
-- Assistência de conformidade com RGPD (dpo@eleva.care)
-- Formação e integração na plataforma
-
-### 5.2 O Que NÃO Fornecemos
-
-- ❌ Aconselhamento médico ou supervisão clínica
-- ❌ Verificação das suas credenciais (você auto-certifica)
-- ❌ Seguro de responsabilidade profissional
-- ❌ Referências de pacientes ou garantias de marcações
-- ❌ Gestão de registos médicos (fornecemos apenas armazenamento)
-- ❌ Assistência de faturação ou codificação
-- ❌ Aconselhamento jurídico ou fiscal
-
----
-
-## 6. Termos de Pagamento e Comissão
-
-### 6.1 Estrutura de Comissão
-
-Para cada consulta concluída marcada através da Eleva.care:
-
-- **Comissão da Plataforma**: 15% da taxa de sessão
-- **Você recebe**: 85% da taxa de sessão
-- **Processamento de pagamento**: Via Stripe; as taxas do Stripe estão incluídas dentro da comissão de 15% da Eleva.care
-
-**Exemplo**:
-
-- Taxa de sessão: €100
-- Comissão Eleva.care (inclui taxas Stripe): €15 (15%)
-- O seu pagamento: €85,00
-
-### 6.2 Cronograma de Pagamentos
-
-- **Frequência**: Semanal (todas as segundas-feiras)
-- **Método**: Transferência bancária direta via Stripe Connect
-- **Pagamento mínimo**: €10
-- **Moeda**: EUR (ou a sua moeda local via Stripe)
-
-### 6.3 Política de Reembolsos
-
-Se um paciente solicitar um reembolso:
-
-- Você deve tratar das decisões de reembolso (você controla os preços e políticas)
-- Se reembolso aprovado: Montante total reembolsado ao paciente (incluindo a nossa comissão)
-- Você pode definir as suas próprias políticas de cancelamento e reembolso
-- A Eleva.care assistirá no processamento de reembolsos através do Stripe
-
-### 6.4 Responsabilidades Fiscais
-
-Você é responsável por:
-
-- ✅ Todos os impostos sobre rendimentos auferidos através da plataforma
-- ✅ Registo e conformidade com IVA (se aplicável)
-- ✅ Contribuições para a segurança social
-- ✅ Declarações fiscais anuais
-
-A Eleva.care fornecerá:
-
-- ✅ Resumo anual de rendimentos (para fins fiscais)
-- ✅ Acesso ao histórico de transações
-- ❌ NÃO fornecemos aconselhamento fiscal (consulte o seu contabilista)
-
----
-
-## 7. Relação com o Paciente e Padrões de Cuidados
-
-### 7.1 Relação Direta Profissional-Paciente
-
-Você reconhece que:
-
-- A sua relação é diretamente com o paciente (NÃO com a Eleva.care)
-- Você é responsável pela qualidade dos cuidados
-- Você deve obter consentimento informado antes do tratamento
-- Você deve manter a confidencialidade do paciente
-- A Eleva.care NÃO é parte das suas relações com os pacientes
-
-### 7.2 Aviso de Cuidados de Emergência
-
-**A plataforma Eleva.care NÃO é para emergências médicas.**
-
-Você deve:
-
-- ✅ Informar os pacientes de que a plataforma não é para emergências
-- ✅ Fornecer informações de contacto de emergência (UE: 112, EUA: 911)
-- ✅ Estabelecer protocolos de emergência com os pacientes
-- ✅ NÃO usar a plataforma para situações urgentes ou que ameacem a vida
-
-### 7.3 Conformidade com Telessaúde
-
-Se você fornecer serviços de telessaúde:
-
-- ✅ Você deve cumprir com os regulamentos de telessaúde na sua jurisdição
-- ✅ Você deve verificar a localização do paciente antes de fornecer cuidados transfronteiriços
-- ✅ Você deve manter o licenciamento apropriado para telessaúde
-- ✅ Você é responsável pelo padrão de cuidados em telessaúde
-
----
-
-## 8. Conduta Proibida
-
-Você concorda em NÃO:
-
-- ❌ Deturpar as suas qualificações ou credenciais
-- ❌ Praticar fora do âmbito da sua licença
-- ❌ Fornecer serviços enquanto a licença estiver suspensa ou revogada
-- ❌ Violar a confidencialidade do paciente
-- ❌ Envolver-se em má conduta profissional
-- ❌ Usar a plataforma para atividades ilegais ou fraudulentas
-- ❌ Contornar o sistema de pagamento da plataforma (pagamentos diretos ao paciente)
-- ❌ Solicitar pacientes para usar serviços fora da plataforma para evitar taxas
-- ❌ Partilhar o acesso à sua conta com outros
-- ❌ Usar ferramentas automatizadas ou bots para manipular a plataforma
-
-**A violação pode resultar em suspensão ou rescisão permanente da conta.**
-
----
-
-## 9. Prazo e Rescisão
-
-### 9.1 Prazo do Acordo
-
-Este Acordo inicia quando você cria a sua conta de profissional e continua até ser rescindido por qualquer das partes.
-
-### 9.2 Rescisão por Você
-
-Você pode rescindir este Acordo a qualquer momento:
-
-- Fornecendo aviso prévio por escrito de 30 dias para support@eleva.care
-- Encerrando a sua conta de profissional
-- Concluindo ou cancelando todas as consultas agendadas
-
-Após a rescisão, você permanece responsável por:
-
-- Concluir consultas agendadas (ou fornecer aviso razoável aos pacientes)
-- Pagamentos pendentes devidos à Eleva.care
-- Obrigações de retenção de dados do paciente (regra de 10 anos)
-
-### 9.3 Rescisão pela Eleva.care
-
-Podemos rescindir ou suspender a sua conta:
-
-- **Imediatamente** por: Revogação de licença, fraude, atividade ilegal, má conduta grave
-- **Com aviso de 30 dias** por: Violação do Acordo, violações de política, razões comerciais
-
-### 9.4 Efeito da Rescisão
-
-Após a rescisão:
-
-- ✅ Você perde acesso aos recursos da plataforma
-- ✅ As marcações de pacientes são canceladas (com aviso aos pacientes)
-- ✅ Os pagamentos pendentes são processados
-- ✅ **Dados clínicos**: Forneceremos exportação dos seus dados (você deve reter por 10 anos)
-- ✅ Dados da plataforma: Podemos reter para fins de conformidade legal
-
-### 9.5 Exportação de Dados Após Rescisão
-
-Você pode solicitar:
-
-- Exportação de todas as notas clínicas e dados de pacientes (encriptados)
-- Histórico de transações e registos financeiros
-- Informações de contacto de pacientes (se consentido)
-
-Forneceremos a exportação de dados dentro de 30 dias da rescisão.
-
----
-
-## 10. Propriedade Intelectual
-
-### 10.1 Propriedade da Plataforma
-
-Toda a tecnologia da plataforma, software, designs, marcas registadas e propriedade intelectual são propriedade da Eleva.care. Você recebe uma licença limitada, não exclusiva e intransferível para usar a plataforma durante o prazo deste Acordo.
-
-### 10.2 O Seu Conteúdo
-
-Você mantém a propriedade de:
-
-- As suas notas clínicas e registos médicos
-- O conteúdo do seu perfil profissional
-- Os seus materiais educacionais
-
-Ao usar a plataforma, você concede à Eleva.care uma licença para:
-
-- Exibir o seu perfil aos pacientes
-- Armazenar e fazer cópia de segurança dos seus dados de forma segura
-- Usar dados agregados e anonimizados para melhorias da plataforma
-
----
-
-## 11. Confidencialidade
-
-### 11.1 Confidencialidade Mútua
-
-Ambas as partes concordam em manter a confidencialidade de:
-
-- Operações e estratégias comerciais
-- Informações técnicas e detalhes da plataforma
-- Informações financeiras
-- Dados de utilizadores e análises
-
-### 11.2 Confidencialidade do Paciente
-
-Você deve manter a confidencialidade do paciente de acordo com:
-
-- RGPD (Regulamento UE 2016/679)
-- Leis portuguesas de privacidade em saúde
-- Padrões éticos profissionais
-- HIPAA (se fornecer serviços a pacientes dos EUA)
-
----
-
-## 12. Alterações e Atualizações
-
-A Eleva.care pode atualizar este Acordo:
-
-- Fornecendo aviso de 30 dias por email
-- Publicando o Acordo atualizado na plataforma
-- Obtendo a sua aceitação para alterações materiais
-
-O uso continuado da plataforma após as alterações constitui aceitação.
-
----
-
-## 13. Lei Aplicável e Resolução de Disputas
-
-### 13.1 Lei Aplicável
-
-Este Acordo é regido pelas leis de **Portugal**.
-
-### 13.2 Resolução de Disputas
-
-As disputas devem ser resolvidas:
-
-1. **Primeiro**: Negociação de boa-fé (30 dias)
-2. **Segundo**: Mediação (se a negociação falhar)
-3. **Terceiro**: Tribunais de Portugal (se a mediação falhar)
-
-### 13.3 Período de Limitação
-
-As reclamações devem ser apresentadas dentro de **2 anos** do evento que dá origem à reclamação.
-
----
-
-## 14. Disposições Gerais
-
-### 14.1 Acordo Completo
-
-Este Acordo constitui o acordo completo entre as partes e substitui todos os acordos ou entendimentos anteriores.
-
-### 14.2 Divisibilidade
-
-Se qualquer disposição for inválida ou inexequível, as restantes disposições permanecem em pleno vigor.
-
-### 14.3 Renúncia
-
-A falha em fazer cumprir qualquer disposição não renuncia ao nosso direito de fazê-lo posteriormente.
-
-### 14.4 Cessão
-
-Você NÃO pode ceder este Acordo sem o nosso consentimento por escrito. Podemos ceder este Acordo a um sucessor ou afiliado.
-
-### 14.5 Notificações
-
-Todas as notificações devem ser enviadas para:
-
-**Para a Eleva.care**:
-
-- Email: support@eleva.care
-- Morada: Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-
-**Para Você**:
-
-- Email fornecido na sua conta
-
-### 14.6 Força Maior
-
-Nenhuma das partes é responsável por atrasos ou falhas devido a circunstâncias além do controlo razoável (desastres naturais, guerra, pandemias, etc.).
-
----
-
-## 15. Reconhecimento e Aceitação
-
-Ao criar uma conta de profissional na Eleva.care, você reconhece que:
-
-- ✅ Leu e compreendeu este Acordo
-- ✅ Concorda em estar vinculado por todos os termos e condições
-- ✅ Confirma que é um profissional de saúde licenciado
-- ✅ Confirma que mantém seguro de responsabilidade profissional
-- ✅ Compreende que é um prestador independente, NÃO um funcionário
-- ✅ Compreende as suas responsabilidades como responsável pelo tratamento sob o RGPD
-- ✅ Concorda em indemnizar a Eleva.care por reclamações de negligência médica
-
----
-
-## Informações Legais
-
-**Operador da Plataforma**:
-
-- **Entidade Legal**: BÚZIOS E TARTARUGAS - LDA
-- **Nome Comercial**: Eleva.care
-- **NIPC/NIF**: PT515001708
-- **Forma Legal**: Sociedade por Quotas (LDA)
-- **Sede**: Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Diretor Geral**: Rodrigo Barona Oliete
-- **Email**: support@eleva.care
-- **Telefone**: +351 931 897 950
-- **Encarregado de Proteção de Dados**: dpo@eleva.care
-
----
-
-## Questões ou Preocupações?
-
-**Suporte Técnico**: support@eleva.care  
-**Questões Legais**: legal@eleva.care  
-**Proteção de Dados**: dpo@eleva.care  
-**Desenvolvimento de Negócios**: partnerships@eleva.care
-
----
-
-**Obrigado por fazer parceria com a Eleva.care para tornar os cuidados de saúde de qualidade mais acessíveis!**
-
-_Última Atualização: 16 de abril de 2025_
+Operador: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Suporte `support@eleva.care`, Legal `legal@eleva.care`, DPO `dpo@eleva.care`.
