--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -1,231 +1,80 @@
 # Políticas de Pagamento
 
-_Data de Vigência:_ 3 de junho de 2025
+_Data de vigência: 3 de junho de 2025_
 
-Estas Políticas de Pagamento regem todas as transações financeiras realizadas através da plataforma Eleva.care. Ao utilizar nossos serviços de pagamento, você concorda em estar vinculado a estas políticas, além de nossos Termos e Condições.
+Aqui explicamos como funcionam os pagamentos na Eleva.care de forma simples.
 
-**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia**. Os pagamentos processados através de nossa plataforma são para serviços fornecidos por **profissionais de saúde independentes e licenciados**. A Eleva.care facilita o processamento de pagamentos, mas não fornece serviços médicos. Cobramos uma taxa de serviço da plataforma para manter e operar nossa infraestrutura de tecnologia, marketing e suporte.
+## 1) Pelo que você está pagando
 
-## 1. Papel da Plataforma nos Pagamentos
+- A Eleva.care é um marketplace tecnológico. Os pagamentos vão para profissionais independentes e licenciados pelos seus serviços.
+- O preço exibido inclui tudo (sem custos ocultos):
+  - O profissional recebe 85% do preço da consulta
+  - A Eleva.care retém 15% como taxa de plataforma (tecnologia, infraestrutura, suporte, marketing, taxas Stripe)
 
-### 1.1 Facilitação de Pagamentos
+Exemplo €100: Profissional €85, Taxa de plataforma €15.
 
-- A Eleva.care fornece a plataforma tecnológica para processamento seguro de pagamentos
-- Os pagamentos são feitos AOS profissionais de saúde independentes PELOS seus serviços médicos
-- Processamos pagamentos de forma segura via Stripe e Stripe Connect
-- NÃO somos o provedor de serviços médicos
-- NÃO somos responsáveis pela qualidade dos serviços médicos prestados
+## 2) Métodos de pagamento
 
-### 1.2 Pelo Que Você Está Pagando
-
-Quando você faz um pagamento através da Eleva.care:
-
-- **Taxa de Serviço do Profissional**: Pagamento pela consulta/serviço do profissional de saúde (85%)
-- **Taxa de Serviço da Plataforma**: Taxa de 15% pelo uso da tecnologia de agendamento, processamento de pagamentos e plataforma da Eleva.care
-
-**Exemplo**: Para uma consulta de €100:
-
-- O profissional recebe: €85,00
-- Taxa de serviço da plataforma: €15,00 (cobre tecnologia, marketing, vendas, infraestrutura e taxas do Stripe)
-
-O preço total exibido no agendamento inclui todas as taxas. Sem custos ocultos.
-
-## 2. Métodos de Pagamento
-
-A Eleva.care aceita vários métodos de pagamento, incluindo:
-
-- Cartões de crédito e débito (Visa, Mastercard, American Express)
+- Cartões (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3. Políticas de Pagamento Multibanco
+## 3) Regras do Multibanco (quando paga com 8+ dias de antecedência)
 
-### 3.1 Restrições de Janela de Pagamento
+- Não disponível para consultas que ocorram em ≤8 dias
+- Se a consulta for em 8+ dias, reservamos o horário por 7 dias enquanto você paga
+- Você tem 7 dias completos para concluir o pagamento
+- Enviaremos lembretes no dia 3 e no dia 6 com instruções (caixa eletrônico, internet banking, MB WAY)
 
-- **Consultas dentro de 8 dias**: Pagamentos Multibanco **não estão disponíveis** para consultas agendadas dentro de 8 dias do momento atual
-- **Consultas com 8+ dias de antecedência**: Pagamentos Multibanco são aceitos com termos especiais descritos abaixo
+Pagamentos Multibanco tardios (após 7 dias): se o horário não estiver mais disponível ou violar regras do profissional, reembolsamos automaticamente 90% (retenção de 10% como taxa de processamento).
 
-### 3.2 Sistema de Reserva de Horário
+## 4) Reembolsos por conflitos (Multibanco tardio)
 
-Ao pagar com Multibanco para consultas agendadas com 8 ou mais dias de antecedência:
+- Reembolso automático: 90% devolvido, 10% retido como processamento
+- Prazo de reembolso: normalmente 5–10 dias úteis (via Stripe)
+- Notificamos por e‑mail
 
-- Seu horário de consulta é **reservado por 7 dias** a partir do momento do agendamento
-- Você tem **7 dias completos** para completar o pagamento Multibanco
-- Se o pagamento não for recebido dentro de 7 dias, a reserva de horário expira e fica disponível para outros pacientes
+Se houver erro do sistema ou caso especial, contate o suporte em 48h com sua referência; analisamos em 2 dias úteis.
 
-### 3.3 Sistema de Lembretes de Pagamento
+## 5) Escolha do método de pagamento
 
-Para ajudar a garantir que você não perca o prazo de pagamento:
+- Cartão (instantâneo):
+  - Melhor para consultas em ≤8 dias, de última hora, ou quando precisa de confirmação imediata
+- Multibanco (janela de 7 dias):
+  - Melhor para 8+ dias, preferência local PT e pagamento diferido
 
-- **Lembrete Dia 3**: Email de lembrete amigável com 4 dias restantes para pagar
-- **Lembrete Dia 6**: Aviso final urgente com 1 dia restante para pagar
-- **Instruções de Pagamento**: Cada lembrete inclui detalhes completos de pagamento Multibanco e instruções
-- **Métodos de Pagamento**: Pague via caixa eletrônico, internet banking ou MB WAY (se suportado pelo seu banco)
+## 6) Pagamentos a profissionais (Stripe Connect)
 
-### 3.4 Processamento de Pagamento Atrasado
+- Profissionais são independentes e recebem via Stripe Connect após consultas concluídas
+- Divisão padrão: 85% profissional / 15% plataforma
+- O prazo depende das configurações do profissional e do banco
 
-Se um pagamento Multibanco for processado após o período de reserva de 7 dias:
+## 7) Moeda e preços
 
-- O sistema verifica automaticamente conflitos de consulta
-- Se o horário da consulta não estiver mais disponível ou entrar em conflito com os requisitos de disponibilidade do profissional, será processado um **reembolso parcial**
-- **Estrutura de Reembolso**: 90% do valor do pagamento será reembolsado, com 10% retido como taxa de processamento
+- Preços em EUR; pode haver conversão para cartões internacionais
+- Preços travados no momento do agendamento; sem custos extras após confirmação
+- Impostos/taxas incluídos no preço exibido
 
-## 4. Conflitos de Consulta e Política de Reembolso
+## 8) Segurança e fraude
 
-### 4.1 Detecção de Conflitos
+- Não armazenamos números de cartão; Stripe processa (conformidade PCI DSS)
+- Criptografia e detecção de fraude; transações suspeitas podem atrasar/ser recusadas
+- Verificação adicional pode ser exigida para pagamentos de alto valor
 
-Nosso sistema detecta automaticamente conflitos, incluindo:
+## 9) Pagamentos com falha
 
-- **Conflitos de horário**: Quando outro paciente agendou o mesmo horário ou horário sobreposto
-- **Violações de aviso mínimo**: Quando a consulta não atende mais aos requisitos de aviso mínimo do profissional
-- **Mudanças de disponibilidade do profissional**: Quando o profissional não está mais disponível no horário agendado
+- Cancelam automaticamente o agendamento; notificamos por e‑mail
+- Tente novamente criando um novo pagamento; falhas repetidas podem restringir temporariamente
 
-### 4.2 Processamento de Reembolsos
+## 10) Suporte e reembolsos
 
-Quando conflitos são detectados devido a pagamentos Multibanco atrasados:
+- Pagamentos: `support@eleva.care` (meta de resposta em 24h)
+- Reembolsos: solicite em até 7 dias do pagamento; emergências médicas caso a caso; cancelamentos conforme nossos Termos
 
-#### Reembolsos Automáticos
+## 11) Atualizações e conformidade
 
-- **Valor do Reembolso**: 90% do pagamento original
-- **Taxa de Processamento**: 10% do pagamento original (retido)
-- **Tempo de Processamento**: 5-10 dias úteis via Stripe
-- **Notificação**: Notificação automática por email em seu idioma preferido
-
-#### Exemplo de Detalhamento de Reembolso
-
-- Pagamento Original: €100,00
-- Valor do Reembolso: €90,00 (90%)
-- Taxa de Processamento: €10,00 (10% - retido)
-
-### 4.3 Resolução Manual
-
-Em casos de erros do sistema ou circunstâncias especiais:
-
-- Entre em contato com nossa equipe de suporte dentro de 48 horas
-- Forneça sua referência de pagamento e detalhes do agendamento
-- Nossa equipe revisará e resolverá o problema dentro de 2 dias úteis
-
-## 5. Guia de Seleção de Método de Pagamento
-
-### 5.1 Pagamentos com Cartão (Imediato)
-
-**Melhor para:**
-
-- Consultas dentro de 8 dias
-- Necessidade de confirmação imediata
-- Agendamentos de última hora
-
-**Benefícios:**
-
-- Processamento de pagamento instantâneo
-- Acesso imediato ao link da reunião
-- Sem estresse de prazo de pagamento
-
-### 5.2 Pagamentos Multibanco (Janela de 7 Dias)
-
-**Melhor para:**
-
-- Consultas planejadas com bastante antecedência (8+ dias)
-- Residentes portugueses que preferem métodos de pagamento locais
-- Quem se sente confortável com pagamento diferido
-
-**Requisitos:**
-
-- A consulta deve ser agendada com 8+ dias de antecedência
-- O pagamento deve ser completado dentro de 7 dias
-- Acesso a caixa eletrônico, internet banking ou MB WAY
-
-## 6. Processamento de Pagamentos aos Profissionais
-
-### 6.1 Transferências de Pagamento
-
-**A Eleva.care atua como facilitador de pagamentos entre pacientes e profissionais de saúde independentes:**
-
-- Os profissionais de saúde são profissionais independentes que recebem pagamento por seus serviços
-- Os pagamentos são processados através do Stripe Connect
-- Os profissionais recebem 85% da taxa de consulta
-- A Eleva.care retém 15% como taxa de serviço da plataforma (inclui taxas de processamento Stripe)
-- As transferências ocorrem após a conclusão bem-sucedida da consulta
-- O cronograma de transferências varia de acordo com as configurações do profissional e requisitos bancários locais
-- Todas as transferências cumprem com as políticas do Stripe Connect e regulamentos locais
-
-### 6.2 Resolução de Disputas
-
-- As disputas de pagamento são tratadas através do processo de resolução de disputas do Stripe
-- Os profissionais de saúde são notificados imediatamente de quaisquer disputas de pagamento
-- Documentação e evidências podem ser necessárias para resolução de disputas
-
-## 7. Moeda e Preços
-
-### 7.1 Moeda Base
-
-- Todos os preços são exibidos em Euros (EUR)
-- Conversão de moeda pode ser aplicada para pagamentos internacionais
-- As taxas de câmbio são determinadas pelos processadores de pagamento no momento da transação
-
-### 7.2 Mudanças de Preços
-
-- Os preços das consultas são bloqueados no momento do agendamento
-- Não serão aplicados custos adicionais após a confirmação do agendamento
-- A taxa de serviço da plataforma de 15% está incluída no preço exibido
-- Impostos e taxas estão incluídos no preço exibido
-
-## 8. Segurança de Pagamentos
-
-### 8.1 Proteção de Dados
-
-- Todos os dados de pagamento são processados de forma segura através do Stripe
-- Não armazenamos detalhes de cartões de pagamento em nossos servidores
-- Todas as transações são criptografadas e cumprem com os padrões PCI DSS
-
-### 8.2 Prevenção de Fraude
-
-- Sistemas automatizados de detecção de fraude estão implementados
-- Transações suspeitas podem ser atrasadas ou recusadas
-- Verificação adicional pode ser necessária para transações de alto valor
-
-## 9. Pagamentos Falhados
-
-### 9.1 Falhas de Pagamento
-
-- Pagamentos falhados resultam em cancelamento automático da consulta
-- Os pacientes são notificados imediatamente por email
-- Novos agendamentos podem ser feitos com métodos de pagamento válidos
-
-### 9.2 Política de Repetição
-
-- Tentativas automáticas de pagamento não são realizadas
-- Os pacientes devem iniciar novas tentativas de pagamento manualmente
-- Múltiplas tentativas falhadas podem resultar em restrições temporárias de agendamento
-
-## 10. Atendimento ao Cliente
-
-### 10.1 Problemas de Pagamento
-
-Para questões ou problemas relacionados a pagamentos:
-
-- Email: support@eleva.care
-- Tempo de resposta: Dentro de 24 horas
-- Disponível em vários idiomas (Inglês, Português, Espanhol, Português Brasileiro)
-
-### 10.2 Solicitações de Reembolso
-
-- As solicitações de reembolso devem ser submetidas dentro de 7 dias da transação original
-- Reembolsos por emergência médica são considerados caso a caso
-- As políticas de cancelamento se aplicam conforme descrito em nossos Termos e Condições
-
-## 11. Atualizações de Políticas
-
-Estas políticas de pagamento podem ser atualizadas periodicamente. Os usuários serão notificados de mudanças significativas por email e notificações da plataforma. O uso continuado da plataforma constitui aceitação das políticas atualizadas.
-
-## 12. Conformidade Legal
-
-Estas políticas cumprem com:
-
-- Leis portuguesas de proteção do consumidor
-- Regulamentos europeus de serviços de pagamento (PSD2)
-- Requisitos de proteção de dados do GDPR
-- Termos de serviço e padrões de conformidade do Stripe
+- Podemos atualizar estas políticas; uso contínuo implica aceitação
+- Cumprimos defesa do consumidor PT, PSD2 UE, GDPR e termos da Stripe
 
 ---
 
-_Para questões sobre estas políticas de pagamento, entre em contato com nossa equipe de suporte em support@eleva.care_
+Dúvidas sobre pagamentos? `support@eleva.care`.
