--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -1,231 +1,80 @@
 # Payment Policies
 
-_Effective Date:_ June 3, 2025
+_Effective Date: June 3, 2025_
 
-These Payment Policies govern all financial transactions conducted through the Eleva.care platform. By using our payment services, you agree to be bound by these policies in addition to our Terms and Conditions.
+This page explains how payments work on Eleva.care in plain language.
 
-**IMPORTANT**: Eleva.care is a **technology marketplace platform**. Payments processed through our platform are for services provided by **independent, licensed healthcare practitioners**. Eleva.care facilitates the payment processing but does not provide medical services. We charge a platform service fee to maintain and operate our technology, marketing, and support infrastructure.
+## 1) What you’re paying for
 
-## 1. Platform Role in Payments
+- Eleva.care is a technology marketplace. Payments go to independent, licensed practitioners for their services.
+- Pricing shown at booking includes everything (no hidden fees):
+  - Practitioner receives 85% of the appointment price
+  - Eleva.care retains 15% as a platform fee (covers tech, infra, support, marketing, Stripe fees)
 
-### 1.1 Payment Facilitation
+Example for €100: Practitioner €85, Platform fee €15.
 
-- Eleva.care provides the technology platform for secure payment processing
-- Payments are made TO independent healthcare practitioners FOR their medical services
-- We process payments securely via Stripe and Stripe Connect
-- We are NOT the medical service provider
-- We are NOT responsible for the quality of medical services provided
+## 2) Payment methods
 
-### 1.2 What You're Paying For
-
-When you make a payment through Eleva.care:
-
-- **Practitioner Service Fee**: Payment for the healthcare practitioner's consultation/service (85%)
-- **Platform Service Fee**: 15% fee for using Eleva.care's booking, payment processing, and platform technology
-
-**Example**: For a €100 appointment:
-
-- Practitioner receives: €85.00
-- Platform service fee: €15.00 (covers technology, marketing, sales, infrastructure, and Stripe fees)
-
-The total price displayed at booking includes all fees. No hidden charges.
-
-## 2. Payment Methods
-
-Eleva.care accepts various payment methods including:
-
-- Credit and debit cards (Visa, Mastercard, American Express)
+- Cards (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3. Multibanco Payment Policies
+## 3) Multibanco rules (when paying 8+ days in advance)
 
-### 3.1 Payment Window Restrictions
+- Not available for appointments taking place within 8 days
+- When your appointment is 8+ days away, we reserve your slot for 7 days while you pay
+- You have 7 full days to complete payment
+- We’ll send reminders on day 3 and day 6 with instructions (ATM, online banking, MB WAY)
 
-- **Appointments within 8 days**: Multibanco payments are **not available** for appointments scheduled within 8 days of the current time
-- **Appointments 8+ days in advance**: Multibanco payments are accepted with special terms outlined below
+Late Multibanco payments (after 7 days): If the slot is no longer available or violates practitioner rules, we automatically refund 90% (retain 10% processing fee).
 
-### 3.2 Slot Reservation System
+## 4) Refunds for conflicts (late Multibanco)
 
-When paying with Multibanco for appointments scheduled 8 or more days in advance:
+- Automatic refund: 90% back, 10% retained as processing fee
+- Refund time: typically 5–10 business days (via Stripe)
+- We’ll notify you by email
 
-- Your appointment slot is **reserved for 7 days** from the time of booking
-- You have **7 full days** to complete the Multibanco payment
-- If payment is not received within 7 days, the slot reservation expires and becomes available to other patients
+If something went wrong (system error or edge case), contact support within 48 hours with your payment reference; we’ll review within 2 business days.
 
-### 3.3 Payment Reminder System
+## 5) Choosing a payment method
 
-To help ensure you don't miss your payment deadline:
+- Card (instant):
+  - Best for bookings within 8 days, last‑minute, or when you need instant confirmation
+- Multibanco (7‑day window):
+  - Best for bookings 8+ days ahead, local PT preference, comfortable with deferred payment
 
-- **Day 3 Reminder**: Friendly reminder email with 4 days remaining to pay
-- **Day 6 Reminder**: Urgent final notice with 1 day remaining to pay
-- **Payment Instructions**: Each reminder includes complete Multibanco payment details and instructions
-- **Payment Methods**: Pay via ATM, online banking, or MB WAY (if supported by your bank)
+## 6) Practitioner payouts (Stripe Connect)
 
-### 3.4 Late Payment Processing
+- Practitioners are independent and are paid via Stripe Connect after successful appointments
+- Standard split: 85% practitioner / 15% platform
+- Payout timing depends on practitioner settings and local bank rules
 
-If a Multibanco payment is processed after the 7-day reservation period:
+## 7) Currency and pricing
 
-- The system automatically checks for appointment conflicts
-- If the appointment slot is no longer available or conflicts with practitioner availability requirements, a **partial refund** will be processed
-- **Refund Structure**: 90% of the payment amount will be refunded, with 10% retained as a processing fee
+- Prices shown in EUR; processors may apply conversion for international cards
+- Prices are locked at booking; no extra charges after confirmation
+- Taxes/fees included in the displayed price
 
-## 4. Appointment Conflicts and Refund Policy
+## 8) Payment security and fraud
 
-### 4.1 Conflict Detection
+- We do not store card numbers; payments are processed by Stripe (PCI DSS compliant)
+- We use encryption and fraud detection; suspicious transactions may be delayed/declined
+- Additional verification may be required for high‑value payments
 
-Our system automatically detects conflicts, including:
+## 9) Failed payments
 
-- **Time slot conflicts**: When another patient has booked the same or overlapping time
-- **Minimum notice violations**: When the appointment no longer meets the practitioner's minimum notice requirements
-- **Practitioner availability changes**: When the practitioner is no longer available at the scheduled time
+- Failed payments cancel the booking automatically; you’ll be notified by email
+- Retry by creating a new payment; repeated failures may temporarily restrict booking
 
-### 4.2 Refund Processing
+## 10) Support and refunds
 
-When conflicts are detected due to late Multibanco payments:
+- Payment questions: `support@eleva.care` (we aim to respond within 24 hours)
+- Refund requests: submit within 7 days of the original payment; medical emergencies are considered case‑by‑case; cancellation rules in our Terms apply
 
-#### Automatic Refunds
+## 11) Updates and compliance
 
-- **Refund Amount**: 90% of the original payment
-- **Processing Fee**: 10% of the original payment (retained)
-- **Processing Time**: 5-10 business days via Stripe
-- **Notification**: Automatic email notification in your preferred language
-
-#### Refund Breakdown Example
-
-- Original Payment: €100.00
-- Refund Amount: €90.00 (90%)
-- Processing Fee: €10.00 (10% - retained)
-
-### 4.3 Manual Resolution
-
-In cases of system errors or special circumstances:
-
-- Contact our support team within 48 hours
-- Provide your payment reference and booking details
-- Our team will review and resolve the issue within 2 business days
-
-## 5. Payment Method Selection Guide
-
-### 5.1 Card Payments (Immediate)
-
-**Best for:**
-
-- Appointments within 8 days
-- Immediate confirmation needed
-- Last-minute bookings
-
-**Benefits:**
-
-- Instant payment processing
-- Immediate meeting link access
-- No payment deadline stress
-
-### 5.2 Multibanco Payments (7-Day Window)
-
-**Best for:**
-
-- Appointments planned well in advance (8+ days)
-- Portuguese residents preferring local payment methods
-- Those comfortable with deferred payment
-
-**Requirements:**
-
-- Appointment must be scheduled 8+ days in advance
-- Payment must be completed within 7 days
-- Access to ATM, online banking, or MB WAY
-
-## 6. Practitioner Payment Processing
-
-### 6.1 Payment Transfers
-
-**Eleva.care acts as a payment facilitator between patients and independent healthcare practitioners:**
-
-- Healthcare practitioners are independent professionals receiving payment for their services
-- Payments are processed through Stripe Connect
-- Practitioners receive 85% of the appointment fee
-- Eleva.care retains 15% as a platform service fee (includes Stripe processing fees)
-- Transfers occur after successful appointment completion
-- Transfer schedule varies by practitioner's settings and local banking requirements
-- All transfers comply with Stripe Connect policies and local regulations
-
-### 6.2 Dispute Resolution
-
-- Payment disputes are handled through Stripe's dispute resolution process
-- Healthcare practitioners are notified immediately of any payment disputes
-- Documentation and evidence may be required for dispute resolution
-
-## 7. Currency and Pricing
-
-### 7.1 Base Currency
-
-- All prices are displayed in Euros (EUR)
-- Currency conversion may apply for international payments
-- Exchange rates are determined by payment processors at the time of transaction
-
-### 7.2 Price Changes
-
-- Appointment prices are locked at the time of booking
-- No additional charges will be applied after booking confirmation
-- The 15% platform service fee is included in the displayed price
-- Taxes and fees are included in the displayed price
-
-## 8. Payment Security
-
-### 8.1 Data Protection
-
-- All payment data is processed securely through Stripe
-- We do not store payment card details on our servers
-- All transactions are encrypted and comply with PCI DSS standards
-
-### 8.2 Fraud Prevention
-
-- Automated fraud detection systems are in place
-- Suspicious transactions may be delayed or declined
-- Additional verification may be required for high-value transactions
-
-## 9. Failed Payments
-
-### 9.1 Payment Failures
-
-- Failed payments result in automatic appointment cancellation
-- Patients are notified immediately via email
-- New bookings can be made with valid payment methods
-
-### 9.2 Retry Policy
-
-- Automatic payment retries are not performed
-- Patients must initiate new payment attempts manually
-- Multiple failed attempts may result in temporary booking restrictions
-
-## 10. Customer Support
-
-### 10.1 Payment Issues
-
-For payment-related questions or issues:
-
-- Email: support@eleva.care
-- Response time: Within 24 hours
-- Available in multiple languages (English, Portuguese, Spanish, Brazilian Portuguese)
-
-### 10.2 Refund Requests
-
-- Refund requests must be submitted within 7 days of the original transaction
-- Medical emergency refunds are considered on a case-by-case basis
-- Cancellation policies apply as outlined in our Terms and Conditions
-
-## 11. Policy Updates
-
-These payment policies may be updated periodically. Users will be notified of significant changes via email and platform notifications. Continued use of the platform constitutes acceptance of updated policies.
-
-## 12. Legal Compliance
-
-These policies comply with:
-
-- Portuguese consumer protection laws
-- European payment services regulations (PSD2)
-- GDPR data protection requirements
-- Stripe's terms of service and compliance standards
+- We may update these policies; continued use means you accept updates
+- We follow Portuguese consumer protection, EU PSD2, GDPR data requirements, and Stripe terms
 
 ---
 
-_For questions regarding these payment policies, please contact our support team at support@eleva.care_
+If you have questions about payments, contact `support@eleva.care`.
