--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -1,231 +1,80 @@
 # Políticas de Pago
 
-_Fecha de Vigencia:_ 3 de junio de 2025
+_Fecha de vigencia: 3 de junio de 2025_
 
-Estas Políticas de Pago rigen todas las transacciones financieras realizadas a través de la plataforma Eleva.care. Al utilizar nuestros servicios de pago, acepta estar sujeto a estas políticas además de nuestros Términos y Condiciones.
+Aquí explicamos cómo funcionan los pagos en Eleva.care en lenguaje claro.
 
-**IMPORTANTE**: Eleva.care es una **plataforma marketplace de tecnología**. Los pagos procesados a través de nuestra plataforma son por servicios proporcionados por **profesionales de salud independientes y licenciados**. Eleva.care facilita el procesamiento de pagos pero no proporciona servicios médicos. Cobramos una tarifa de servicio de plataforma para mantener y operar nuestra infraestructura de tecnología, marketing y soporte.
+## 1) Qué está pagando
 
-## 1. Rol de la Plataforma en los Pagos
+- Eleva.care es un marketplace tecnológico. Los pagos van a profesionales independientes y licenciados por sus servicios.
+- El precio mostrado incluye todo (sin cargos ocultos):
+  - El profesional recibe el 85% del precio de la cita
+  - Eleva.care retiene el 15% como tarifa de plataforma (tecnología, infraestructura, soporte, marketing, tarifas Stripe)
 
-### 1.1 Facilitación de Pagos
+Ejemplo €100: Profesional €85, Tarifa de plataforma €15.
 
-- Eleva.care proporciona la plataforma tecnológica para el procesamiento seguro de pagos
-- Los pagos se realizan A profesionales de salud independientes POR sus servicios médicos
-- Procesamos los pagos de forma segura a través de Stripe y Stripe Connect
-- NO somos el proveedor de servicios médicos
-- NO somos responsables de la calidad de los servicios médicos proporcionados
+## 2) Métodos de pago
 
-### 1.2 Por Qué Está Pagando
-
-Cuando realiza un pago a través de Eleva.care:
-
-- **Tarifa de Servicio del Profesional**: Pago por la consulta/servicio del profesional de salud (85%)
-- **Tarifa de Servicio de la Plataforma**: Tarifa del 15% por usar la tecnología de reservas, procesamiento de pagos y plataforma de Eleva.care
-
-**Ejemplo**: Para una cita de €100:
-
-- El profesional recibe: €85,00
-- Tarifa de servicio de la plataforma: €15,00 (cubre tecnología, marketing, ventas, infraestructura y tarifas de Stripe)
-
-El precio total mostrado en la reserva incluye todas las tarifas. Sin cargos ocultos.
-
-## 2. Métodos de Pago
-
-Eleva.care acepta varios métodos de pago, incluyendo:
-
-- Tarjetas de crédito y débito (Visa, Mastercard, American Express)
+- Tarjetas (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3. Políticas de Pago Multibanco
+## 3) Reglas de Multibanco (cuando paga con 8+ días de antelación)
 
-### 3.1 Restricciones de Ventana de Pago
+- No disponible para citas que ocurren en 8 días o menos
+- Si su cita es en 8+ días, reservamos su horario por 7 días mientras paga
+- Tiene 7 días completos para completar el pago
+- Enviaremos recordatorios en el día 3 y día 6 con instrucciones (cajero, banca en línea, MB WAY)
 
-- **Citas dentro de 8 días**: Los pagos Multibanco **no están disponibles** para citas programadas dentro de 8 días del momento actual
-- **Citas con 8+ días de anticipación**: Los pagos Multibanco son aceptados con términos especiales descritos a continuación
+Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del profesional, reembolsamos automáticamente el 90% (retenemos 10% como tarifa de procesamiento).
 
-### 3.2 Sistema de Reserva de Horario
+## 4) Reembolsos por conflictos (Multibanco tardío)
 
-Al pagar con Multibanco para citas programadas con 8 o más días de anticipación:
+- Reembolso automático: 90% devuelto, 10% retenido como procesamiento
+- Plazo de reembolso: normalmente 5–10 días hábiles (vía Stripe)
+- Le notificaremos por email
 
-- Su horario de cita está **reservado por 7 días** desde el momento de la reserva
-- Tiene **7 días completos** para completar el pago Multibanco
-- Si el pago no se recibe dentro de 7 días, la reserva de horario expira y queda disponible para otros pacientes
+Si hubo un error del sistema o caso especial, contacte soporte dentro de 48h con su referencia; revisamos en 2 días hábiles.
 
-### 3.3 Sistema de Recordatorios de Pago
+## 5) Elegir método de pago
 
-Para ayudar a garantizar que no pierda su plazo de pago:
+- Tarjeta (instantáneo):
+  - Mejor para citas en ≤8 días, última hora, o si necesita confirmación inmediata
+- Multibanco (ventana de 7 días):
+  - Mejor para citas con 8+ días, preferencia local PT, cómodo con pago diferido
 
-- **Recordatorio Día 3**: Correo electrónico de recordatorio amistoso con 4 días restantes para pagar
-- **Recordatorio Día 6**: Aviso final urgente con 1 día restante para pagar
-- **Instrucciones de Pago**: Cada recordatorio incluye detalles completos de pago Multibanco e instrucciones
-- **Métodos de Pago**: Pague a través de cajero automático, banca en línea o MB WAY (si es compatible con su banco)
+## 6) Pagos a profesionales (Stripe Connect)
 
-### 3.4 Procesamiento de Pago Tardío
+- Los profesionales son independientes y se pagan vía Stripe Connect tras citas exitosas
+- Distribución estándar: 85% profesional / 15% plataforma
+- El tiempo de transferencia depende de la configuración del profesional y del banco
 
-Si un pago Multibanco se procesa después del período de reserva de 7 días:
+## 7) Moneda y precios
 
-- El sistema verifica automáticamente conflictos de citas
-- Si el horario de la cita ya no está disponible o entra en conflicto con los requisitos de disponibilidad del profesional, se procesará un **reembolso parcial**
-- **Estructura de Reembolso**: Se reembolsará el 90% del monto del pago, reteniendo el 10% como tarifa de procesamiento
+- Precios en EUR; puede aplicar conversión para tarjetas internacionales
+- Precios se fijan al reservar; no hay cargos extra tras la confirmación
+- Impuestos/tasas incluidos en el precio mostrado
 
-## 4. Conflictos de Citas y Política de Reembolsos
+## 8) Seguridad y fraude
 
-### 4.1 Detección de Conflictos
+- No almacenamos números de tarjeta; Stripe procesa pagos (cumple PCI DSS)
+- Usamos cifrado y detección de fraude; transacciones sospechosas pueden retrasarse/rechazarse
+- Puede requerirse verificación adicional en pagos de alto valor
 
-Nuestro sistema detecta automáticamente conflictos, incluyendo:
+## 9) Pagos fallidos
 
-- **Conflictos de horario**: Cuando otro paciente ha reservado el mismo horario o un horario superpuesto
-- **Violaciones de aviso mínimo**: Cuando la cita ya no cumple con los requisitos de aviso mínimo del profesional
-- **Cambios de disponibilidad del profesional**: Cuando el profesional ya no está disponible en el horario programado
+- Los fallos cancelan la reserva automáticamente; notificamos por email
+- Reintente creando un nuevo pago; múltiples fallos pueden restringir temporalmente
 
-### 4.2 Procesamiento de Reembolsos
+## 10) Soporte y reembolsos
 
-Cuando se detectan conflictos debido a pagos Multibanco tardíos:
+- Pagos: `support@eleva.care` (objetivo de respuesta en 24h)
+- Reembolsos: solicítelos dentro de 7 días del pago; emergencias médicas caso por caso; cancelaciones según nuestros Términos
 
-#### Reembolsos Automáticos
+## 11) Actualizaciones y cumplimiento
 
-- **Monto del Reembolso**: 90% del pago original
-- **Tarifa de Procesamiento**: 10% del pago original (retenido)
-- **Tiempo de Procesamiento**: 5-10 días hábiles a través de Stripe
-- **Notificación**: Notificación automática por correo electrónico en su idioma preferido
-
-#### Ejemplo de Desglose de Reembolso
-
-- Pago Original: €100,00
-- Monto del Reembolso: €90,00 (90%)
-- Tarifa de Procesamiento: €10,00 (10% - retenido)
-
-### 4.3 Resolución Manual
-
-En casos de errores del sistema o circunstancias especiales:
-
-- Contacte a nuestro equipo de soporte dentro de 48 horas
-- Proporcione su referencia de pago y detalles de la reserva
-- Nuestro equipo revisará y resolverá el problema dentro de 2 días hábiles
-
-## 5. Guía de Selección de Método de Pago
-
-### 5.1 Pagos con Tarjeta (Inmediato)
-
-**Mejor para:**
-
-- Citas dentro de 8 días
-- Necesidad de confirmación inmediata
-- Reservas de última hora
-
-**Beneficios:**
-
-- Procesamiento de pago instantáneo
-- Acceso inmediato al enlace de reunión
-- Sin estrés de plazo de pago
-
-### 5.2 Pagos Multibanco (Ventana de 7 Días)
-
-**Mejor para:**
-
-- Citas planificadas con mucha anticipación (8+ días)
-- Residentes portugueses que prefieren métodos de pago locales
-- Quienes se sienten cómodos con pago diferido
-
-**Requisitos:**
-
-- La cita debe programarse con 8+ días de anticipación
-- El pago debe completarse dentro de 7 días
-- Acceso a cajero automático, banca en línea o MB WAY
-
-## 6. Procesamiento de Pagos a Profesionales
-
-### 6.1 Transferencias de Pago
-
-**Eleva.care actúa como facilitador de pagos entre pacientes y profesionales de salud independientes:**
-
-- Los profesionales de salud son profesionales independientes que reciben el pago por sus servicios
-- Los pagos se procesan a través de Stripe Connect
-- Los profesionales reciben el 85% de la tarifa de cita
-- Eleva.care retiene el 15% como tarifa de servicio de la plataforma (incluye tarifas de procesamiento de Stripe)
-- Las transferencias ocurren después de la finalización exitosa de la cita
-- El calendario de transferencias varía según la configuración del profesional y los requisitos bancarios locales
-- Todas las transferencias cumplen con las políticas de Stripe Connect y las regulaciones locales
-
-### 6.2 Resolución de Disputas
-
-- Las disputas de pago se manejan a través del proceso de resolución de disputas de Stripe
-- Los profesionales de salud son notificados inmediatamente de cualquier disputa de pago
-- Puede ser necesaria documentación y evidencia para la resolución de disputas
-
-## 7. Moneda y Precios
-
-### 7.1 Moneda Base
-
-- Todos los precios se muestran en Euros (EUR)
-- La conversión de moneda puede aplicarse para pagos internacionales
-- Las tasas de cambio son determinadas por los procesadores de pago en el momento de la transacción
-
-### 7.2 Cambios de Precios
-
-- Los precios de las citas se bloquean en el momento de la reserva
-- No se aplicarán cargos adicionales después de la confirmación de la reserva
-- La tarifa de servicio de la plataforma del 15% está incluida en el precio mostrado
-- Los impuestos y tarifas están incluidos en el precio mostrado
-
-## 8. Seguridad de Pagos
-
-### 8.1 Protección de Datos
-
-- Todos los datos de pago se procesan de forma segura a través de Stripe
-- No almacenamos detalles de tarjetas de pago en nuestros servidores
-- Todas las transacciones están cifradas y cumplen con los estándares PCI DSS
-
-### 8.2 Prevención de Fraude
-
-- Los sistemas automatizados de detección de fraude están implementados
-- Las transacciones sospechosas pueden retrasarse o rechazarse
-- Puede ser necesaria verificación adicional para transacciones de alto valor
-
-## 9. Pagos Fallidos
-
-### 9.1 Fallos de Pago
-
-- Los pagos fallidos resultan en la cancelación automática de la cita
-- Los pacientes son notificados inmediatamente por correo electrónico
-- Se pueden hacer nuevas reservas con métodos de pago válidos
-
-### 9.2 Política de Reintentos
-
-- No se realizan reintentos automáticos de pago
-- Los pacientes deben iniciar nuevos intentos de pago manualmente
-- Múltiples intentos fallidos pueden resultar en restricciones temporales de reserva
-
-## 10. Atención al Cliente
-
-### 10.1 Problemas de Pago
-
-Para preguntas o problemas relacionados con pagos:
-
-- Email: support@eleva.care
-- Tiempo de respuesta: Dentro de 24 horas
-- Disponible en varios idiomas (Inglés, Portugués, Español, Portugués Brasileño)
-
-### 10.2 Solicitudes de Reembolso
-
-- Las solicitudes de reembolso deben presentarse dentro de 7 días de la transacción original
-- Los reembolsos por emergencia médica se consideran caso por caso
-- Las políticas de cancelación se aplican según lo descrito en nuestros Términos y Condiciones
-
-## 11. Actualizaciones de Políticas
-
-Estas políticas de pago pueden actualizarse periódicamente. Los usuarios serán notificados de cambios significativos por correo electrónico y notificaciones de la plataforma. El uso continuado de la plataforma constituye la aceptación de las políticas actualizadas.
-
-## 12. Cumplimiento Legal
-
-Estas políticas cumplen con:
-
-- Leyes portuguesas de protección del consumidor
-- Regulaciones europeas de servicios de pago (PSD2)
-- Requisitos de protección de datos del RGPD
-- Términos de servicio y estándares de cumplimiento de Stripe
+- Podemos actualizar estas políticas; seguir usando implica aceptación
+- Cumplimos con la protección al consumidor PT, PSD2 UE, RGPD y términos de Stripe
 
 ---
 
-_Para preguntas sobre estas políticas de pago, contacte a nuestro equipo de soporte en support@eleva.care_
+Si tiene dudas sobre pagos, escriba a `support@eleva.care`.
