--- a/content/privacy/br.mdx
+++ b/content/privacy/br.mdx
@@ -1,206 +1,82 @@
 # Política de Privacidade
 
-_Data de Vigência:_ 16 de abril de 2025
+_Data de vigência: 16 de abril de 2025_
 
-Na **Eleva.care** ("nós," "nosso"), estamos comprometidos em proteger sua privacidade e garantir que suas informações pessoais sejam tratadas de forma segura e responsável. Esta Política de Privacidade explica como coletamos, usamos, divulgamos e protegemos seus dados pessoais quando você utiliza nossos **serviços de plataforma tecnológica**.
+Respeitamos sua privacidade. Explicamos de forma simples o que coletamos, por quê, como protegemos e suas opções.
 
-**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia em saúde** que conecta pacientes com profissionais de saúde independentes e licenciados. NÃO somos um provedor de cuidados de saúde. Esta Política de Privacidade cobre como NÓS (Eleva.care) tratamos seus dados da plataforma. Seu profissional de saúde tem suas próprias responsabilidades separadas para os dados médicos que cria.
+## 1) Quem somos e nosso papel
 
-Ao utilizar ou acessar os serviços da plataforma Eleva.care, você concorda com a coleta e uso de seus dados conforme descrito nesta Política de Privacidade.
+- A Eleva.care é um marketplace tecnológico em saúde. Conectamos clientes a profissionais independentes. Não somos provedor de saúde.
+- Atuamos como:
+  - Controlador para operações da plataforma (contas, agendamentos, pagamentos, suporte, analytics)
+  - Operador para notas/arquivos clínicos criados por profissionais (eles são Controladores; nós armazenamos com segurança)
 
-## Papel Dual da Eleva.care no Processamento de Dados
+## 2) O que coletamos
 
-A Eleva.care processa seus dados em **duas capacidades distintas**:
+- Dados de conta: nome, e‑mail, telefone
+- Dados de agendamentos: agendas, histórico, mensagens
+- Dados de pagamento: processados pela Stripe (não armazenamos cartões)
+- Dados de uso: dispositivo, IP, logs, analytics
+- Dados clínicos (quando aplicável): notas/arquivos criados pelo profissional e armazenados criptografados (o profissional controla o conteúdo)
 
-### Como Controlador de Dados (Operações da Plataforma)
+Cookies suportam funções essenciais e analytics. Você pode gerenciá‑los no navegador; alguns recursos podem não funcionar sem cookies.
 
-Para os seguintes dados, **a Eleva.care é o controlador de dados**:
+## 3) Para que usamos os dados
 
-- Suas informações de conta (nome, email, número de telefone)
-- Informações de agendamento e reservas
-- Informações de pagamento (processadas via Stripe)
-- Análises de uso da plataforma
-- Comunicações com nossa equipe de suporte
+- Fornecer e melhorar a plataforma
+- Agendamentos, pagamentos e suporte
+- Segurança, prevenção de fraude e conformidade
+- Comunicações solicitadas ou opt‑in
+- Obrigações legais
 
-**Base Legal**: Execução do contrato (Artigo 6(1)(b) do GDPR / LGPD Art. 7º, V)
+Bases legais: execução de contrato, interesses legítimos (segurança, melhoria), consentimento (quando necessário) e cumprimento legal. Para dados clínicos, os profissionais se baseiam em bases de saúde (ex.: GDPR art. 9(2)(h)); o armazenamento também pode se basear no seu consentimento explícito.
 
-### Como Operador de Dados (Armazenamento de Dados Clínicos)
+## 4) Compartilhamento
 
-Para notas de sessão clínicas e registros médicos criados pelos profissionais:
+- Com operadores que nos ajudam a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
+- Quando exigido por lei ou para proteger direitos e segurança
+- Em transação societária, com aviso
 
-- **O profissional de saúde é o controlador de dados**
-- **A Eleva.care fornece apenas armazenamento criptografado seguro**
-- Processamos estes dados APENAS sob as instruções do profissional
-- NÃO acessamos notas clínicas sem autorização
+Veja nosso [Acordo de Processamento de Dados](/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
 
-**Base Legal**:
+## 5) Retenção (prazos)
 
-- Os profissionais baseiam-se no Artigo 9(2)(h) do GDPR (prestação de cuidados de saúde) / LGPD Art. 11, II
-- Você consente com o armazenamento na plataforma via Artigo 9(2)(a) (consentimento explícito) / LGPD Art. 7º, I
+- Conta: enquanto ativa; se inativa, notificamos após 12 meses e excluímos em até 24 meses
+- Metadados de agendamentos e suporte: ~24 meses após a última atividade
+- Pagamentos/notas fiscais: até 10 anos (legal)
+- Analytics: até 12 meses (depois agregado/anonimizado)
+- Logs de segurança: mínimo 12 meses
+- Backups: ~30 dias (criptografados)
+- Dados clínicos: conforme instruções do profissional e leis de saúde
 
-## 1. Informação que Coletamos
+## 6) Seus direitos
 
-Coletamos diferentes tipos de informação para fornecer e melhorar nossos serviços. A informação que coletamos inclui:
+Sob GDPR/LGPD você pode solicitar: acesso, retificação, exclusão, limitação, portabilidade e oposição. Se dependermos do consentimento, você pode revogá‑lo. Também pode reclamar à sua autoridade (ex.: CNPD em Portugal).
 
-**a. Informação Pessoal**
+Como exercer: `privacy@eleva.care` ou `dpo@eleva.care`. Respondemos em 1 mês (GDPR, extensível em casos complexos) e 15 dias (LGPD).
 
-- **Nome**
-- **Endereço de Email**
-- **Número de Telefone**
-- **Informações de Pagamento** (por exemplo, detalhes de cartão de crédito)
-- **Dados Médicos** (se aplicável)
-- **Endereço e outros detalhes de contato**
+## 7) Segurança
 
-**b. Dados de Uso**
+Criptografia em trânsito e repouso, menor privilégio, auditoria e monitoramento contínuo. Nenhum sistema é 100% seguro, mas trabalhamos para proteger seus dados. Veja nossa página de [Segurança](/legal/security).
 
-- **Endereço IP**
-- **Informação do Dispositivo**
-- **Hora e Data de Uso**
-- **Páginas Visitadas no Website**
-- **URLs de Referência**
+## 8) Transferências internacionais
 
-**c. Cookies e Tecnologias de Rastreamento**
+Hospedamos principalmente na UE. Quando há transferências, usamos salvaguardas legais (SCCs, TIAs e medidas suplementares) em conformidade com GDPR/LGPD.
 
-Utilizamos cookies e tecnologias de rastreamento similares para rastrear sua atividade em nossos serviços e armazenar certas informações. Os cookies nos ajudam a personalizar sua experiência e compreender como nossos serviços são utilizados.
+## 9) Menores
 
-Você pode controlar o uso de cookies ao nível do navegador individual, mas desabilitar cookies pode afetar sua capacidade de usar certas funcionalidades de nossos serviços.
+Nossos serviços não se destinam a menores de 16. No Brasil, menores < 18; tratamos dados apenas com consentimento e participação de pai/mãe ou responsável (LGPD art. 14).
 
-## 2. Como Usamos Sua Informação
+## 10) Solicitações governamentais
 
-Utilizamos a informação que coletamos para vários propósitos, incluindo:
+Exigimos processo legal válido, limitamos o escopo ao necessário, contestamos pedidos excessivos/ilegais e notificamos quando permitido.
 
-- **Fornecer e melhorar nossos serviços:** Para oferecer serviços de saúde personalizados, agendamento de consultas e atendimento ao cliente.
-- **Processar pagamentos:** Para completar transações e faturamento de serviços fornecidos.
-- **Comunicar com você:** Para lhe enviar informações importantes relativamente à sua conta, atualizações de serviços ou ofertas promocionais (se optou por recebê-las).
-- **Melhorar a experiência do usuário:** Para analisar tendências e comportamento em nossa plataforma, permitindo-nos melhorar sua experiência e adaptar nossos serviços às suas necessidades.
-- **Cumprimento de obrigações legais:** Para cumprir com leis, regulamentos e processos legais aplicáveis.
+## 11) Alterações
 
-## 3. Como Compartilhamos Sua Informação
-
-Não vendemos, trocamos ou compartilhamos de outra forma seus dados pessoais com terceiros, exceto nas seguintes circunstâncias:
-
-- **Com prestadores de serviços:** Podemos compartilhar sua informação com empresas ou indivíduos terceiros que fornecem serviços em nosso nome, tais como processamento de pagamentos ou serviços de hospedagem. Estes prestadores são obrigados a proteger sua informação e utilizá-la apenas com o propósito de realizar serviços para nós.
-- **Por razões legais:** Podemos divulgar seus dados pessoais se tal for exigido por lei ou em resposta a processos legais, tais como uma intimação ou ordem judicial.
-- **Transferências comerciais:** No caso de uma fusão, aquisição ou venda de ativos, sua informação pode ser transferida como parte da transação. Notificaremos você antes de seus dados pessoais serem transferidos e ficarem sujeitos a uma política de privacidade diferente.
-
-## 4. Retenção de Dados
-
-Conservamos dados apenas pelo tempo necessário para os fins abaixo ou conforme exigido por lei. A retenção varia por categoria de dados:
-
-| Categoria                              | Finalidade                                    | Retenção Típica                                                                      |
-| -------------------------------------- | --------------------------------------------- | ------------------------------------------------------------------------------------ |
-| Dados de conta (nome, email, telefone) | Fornecer e proteger sua conta                 | Enquanto a conta estiver ativa; se inativa: aviso de 12 meses e exclusão em 24 meses |
-| Metadados de agendamentos e reservas   | Manter histórico e resolver incidentes        | 24 meses após a última atividade (salvo obrigações legais)                           |
-| Registros de pagamento e faturamento   | Conformidade fiscal e contábil                | Até 10 anos (legal)                                                                  |
-| Comunicações de suporte                | Resolução de incidentes e trilha de auditoria | 24 meses após o fechamento do ticket                                                 |
-| Analítica de plataforma                | Melhorar produto e confiabilidade             | Até 12 meses (depois agregado/anonimizado)                                           |
-| Registros de auditoria (segurança)     | Investigações de segurança e conformidade     | Mínimo 12 meses                                                                      |
-| Backups                                | Continuidade de negócios e recuperação        | ~30 dias de backups criptografados em rotação                                        |
-| Dados clínicos (notas, anexos)         | Prontuários sob controle do profissional      | Conforme instruções do profissional e a lei aplicável (p. ex., 10 anos em Portugal)  |
-
-Para dados clínicos, o profissional é o Controlador de Dados e determina o período de retenção. Atuamos como Operador e excluiremos ou devolveremos os dados conforme instrução do profissional ou término do contrato, em conformidade com nosso Acordo de Processamento de Dados.
-
-## 5. Seus Direitos de Proteção de Dados
-
-Dependendo de sua localização, você pode ter os seguintes direitos relativamente aos seus dados pessoais:
-
-- **Direito de acesso:** Pode solicitar uma cópia dos dados pessoais que detemos sobre você.
-- **Direito de retificação:** Pode solicitar que corrijamos qualquer informação imprecisa ou incompleta.
-- **Direito ao apagamento:** Pode solicitar que eliminemos seus dados pessoais, sujeito a certas exceções.
-- **Direito à limitação:** Pode solicitar que limitemos o processamento de seus dados pessoais sob certas circunstâncias.
-- **Direito à portabilidade dos dados:** Pode solicitar uma transferência de seus dados pessoais para outra organização num formato estruturado, de uso comum e legível por máquina.
-- **Direito de retirar o consentimento:** Se nos baseamos em seu consentimento para processar seus dados, você pode retirar esse consentimento a qualquer momento.
-- **Direito de apresentar reclamação:** Você pode apresentar reclamação à sua autoridade local de proteção de dados. Em Portugal: CNPD (Comissão Nacional de Proteção de Dados).
-
-**Prazos de resposta:** Respondemos em até 1 mês sob o GDPR (prorrogável por até 2 meses para solicitações complexas, com aviso) e em 15 dias sob a LGPD. Podemos solicitar informações para verificar sua identidade antes de atender à solicitação.
-
-**Como enviar sua solicitação:** Envie e-mail para privacy@eleva.care ou dpo@eleva.care com o tipo de solicitação, e-mail associado e idioma preferido. Você também pode contatar support@eleva.care.
-
-## 6. Segurança de Seus Dados
-
-Implementamos medidas técnicas e organizacionais apropriadas para proteger seus dados pessoais contra acesso não autorizado, alteração ou destruição. No entanto, nenhuma transmissão de dados pela internet ou método de armazenamento eletrônico é 100% seguro, e não podemos garantir a segurança absoluta de sua informação.
-
-## 7. Transferências Internacionais
-
-Se estiver localizado fora de Portugal, esteja ciente de que seus dados pessoais podem ser transferidos para e processados em Portugal ou outros países onde a Eleva.care opera. Ao utilizar nossos serviços, você consente com a transferência de seus dados para países que podem ter leis de proteção de dados diferentes.
-
-## 8. Privacidade de Crianças
-
-Nossos serviços não se destinam a crianças com menos de 16 anos, e não coletamos intencionalmente dados pessoais de crianças. Se tomarmos conhecimento de que coletamos dados pessoais de uma criança com menos de 16 anos sem verificação do consentimento parental, tomaremos medidas para remover essa informação.
-
-Para usuários brasileiros (LGPD): menores são aqueles com menos de 18 anos. Tratamos dados de menores apenas com o consentimento e participação de um dos pais ou responsável legal (LGPD Artigo 14). Pais/responsáveis podem contatar privacy@eleva.care para acessar ou solicitar a exclusão de dados de menores.
-
-## 9. Alterações a Esta Política de Privacidade
-
-Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão publicadas nesta página com uma data de vigência atualizada. Encorajamos a revisar esta Política de Privacidade periodicamente para se manter informado sobre como estamos protegendo sua informação.
-
-## 10. Solicitações de Autoridades e Órgãos de Segurança
-
-Analisamos cuidadosamente e respondemos a solicitações governamentais e de órgãos de segurança para obtenção de dados de usuários. Nossos princípios são:
-
-- Exigimos uma solicitação válida e legalmente vinculante (p. ex., mandado judicial, intimação) antes de divulgar dados não públicos, salvo emergência que permita por lei.
-- Limitamos as divulgações ao mínimo necessário e contestamos solicitações excessivas, ilegais ou incompatíveis com o GDPR.
-- Quando a lei permitir, notificamos previamente os usuários/controladores afetados antes da divulgação, para que possam buscar medidas legais.
-- Mantemos registros internos e podemos fornecer informações de alto nível sobre como tratamos essas solicitações.
-
-Para mais detalhes sobre transferências internacionais e salvaguardas, consulte nosso Acordo de Processamento de Dados.
+Atualizaremos esta política quando necessário e indicaremos a data de vigência. Avisaremos alterações materiais.
 
 ---
 
-## Controlador de Dados
+**Controlador de dados:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. E‑mail `support@eleva.care`, Telefone `+351 931 897 950`.
 
-O responsável pelo processamento de seus dados pessoais é:
-
-- **BÚZIOS E TARTARUGAS - LDA**
-- Operando comercialmente como **Eleva.care**
-- NIPC/NIF: 515001708
-- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- Email: [support@eleva.care](mailto:support@eleva.care)
-- Telefone: [+351 931 897 950](tel:+351931897950)
-
----
-
-## Conformidade Internacional de Proteção de Dados
-
-### Conformidade com o GDPR (União Europeia)
-
-Como empresa sediada em Portugal, cumprimos integralmente o **Regulamento Geral de Proteção de Dados (GDPR)**. Todas as atividades de processamento de dados aderem aos princípios do GDPR, incluindo:
-
-- **Legalidade, lealdade e transparência**
-- **Limitação da finalidade**
-- **Minimização de dados**
-- **Exatidão**
-- **Limitação de armazenamento**
-- **Integridade e confidencialidade**
-
-Para informações detalhadas sobre nossa conformidade com o GDPR, incluindo nosso Acordo de Processamento de Dados, visite nosso [Acordo de Processamento de Dados](/legal/dpa).
-
-### Conformidade com a LGPD (Brasil)
-
-Também cumprimos a **Lei Geral de Proteção de Dados Pessoais (LGPD)** do Brasil, garantindo que os dados dos usuários brasileiros sejam protegidos com os mesmos altos padrões do GDPR. Nossa conformidade com a LGPD inclui:
-
-- **Bases legais para processamento de dados** (LGPD Artigo 7)
-- **Proteção de categorias especiais de dados pessoais** (LGPD Artigo 11)
-- **Direitos dos titulares de dados** (LGPD Artigos 17-22)
-- **Salvaguardas para transferência internacional de dados** (LGPD Artigos 33-36)
-- **Medidas de segurança de dados** (LGPD Artigo 46)
-
-**Direitos dos Usuários Brasileiros:**
-
-Sob a LGPD, os usuários brasileiros têm o direito de:
-
-1. **Confirmação do processamento de dados** (Artigo 18, I)
-2. **Acesso aos seus dados** (Artigo 18, II)
-3. **Correção de dados incompletos ou incorretos** (Artigo 18, III)
-4. **Anonimização, bloqueio ou eliminação de dados** (Artigo 18, IV)
-5. **Portabilidade de dados** (Artigo 18, V)
-6. **Eliminação de dados processados com consentimento** (Artigo 18, VI)
-7. **Informação sobre compartilhamento de dados** (Artigo 18, VII)
-8. **Informação sobre a possibilidade de não fornecer consentimento** (Artigo 18, VIII)
-9. **Revogação do consentimento** (Artigo 18, IX)
-
-Para exercer qualquer um desses direitos, entre em contato conosco em [privacy@eleva.care](mailto:privacy@eleva.care).
-
-**Encarregado de Proteção de Dados (DPO):**
-
-Para questões relacionadas ao GDPR e à LGPD, entre em contato com nosso DPO em: [dpo@eleva.care](mailto:dpo@eleva.care)
+DPO: `dpo@eleva.care`.
