--- a/content/privacy/en.mdx
+++ b/content/privacy/en.mdx
@@ -1,205 +1,82 @@
 # Privacy Policy
 
-_Effective Date:_ April 16, 2025
+_Effective Date: April 16, 2025_
 
-At **Eleva.care** ("we," "us," "our"), we are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy explains how we collect, use, disclose, and protect your personal data when you use our **technology platform services**.
+We respect your privacy and keep things simple. This page explains what we collect, why, how we protect it, and your choices.
 
-**IMPORTANT**: Eleva.care is a **healthcare technology marketplace platform** that connects patients with independent, licensed healthcare practitioners. We are NOT a healthcare provider. This Privacy Policy covers how WE (Eleva.care) handle your platform data. Your healthcare practitioner has their own separate responsibilities for the medical data they create.
+## 1) Who we are and our role
 
-By using or accessing Eleva.care's platform services, you agree to the collection and use of your data as described in this Privacy Policy.
+- Eleva.care is a healthcare technology marketplace. We connect clients with independent, licensed practitioners. We are not a healthcare provider.
+- We act as:
+  - Data Controller for platform operations (accounts, bookings, payments, support, analytics)
+  - Data Processor for clinical notes and files created by practitioners (they are the Controller; we provide secure storage)
 
-## Eleva.care's Dual Role in Data Processing
+## 2) What we collect
 
-Eleva.care processes your data in **two distinct capacities**:
+- Account data: name, email, phone
+- Booking data: schedules, history, messages
+- Payment data: processed by Stripe (we don’t store card data)
+- Usage data: device, IP, logs, analytics
+- Clinical data (when used): practitioner‑created notes/files stored encrypted (practitioner controls content)
 
-### As Data Controller (Platform Operations)
+Cookies help essential features work and help us understand usage. You can manage cookies in your browser; some features may not work without them.
 
-For the following data, **Eleva.care is the data controller**:
+## 3) Why we use data
 
-- Your account information (name, email, phone number)
-- Booking and scheduling information
-- Payment information (processed via Stripe)
-- Platform usage analytics
-- Communications with our support team
+- Provide and improve the platform
+- Bookings, payments, and support
+- Security, fraud prevention, and compliance
+- Communications you request or opt into
+- Legal obligations
 
-**Legal Basis**: Contract performance (GDPR Article 6(1)(b))
+Legal bases include contract performance, legitimate interests (security, product improvement), consent (where required), and legal compliance. For clinical data, practitioners rely on healthcare bases (e.g., GDPR Art. 9(2)(h)); storage may also rely on your explicit consent.
 
-### As Data Processor (Clinical Data Storage)
+## 4) Sharing
 
-For clinical session notes and medical records created by practitioners:
+- With processors who help us run the service (e.g., Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). They act under contract and can’t use data for their own purposes.
+- If required by law or to protect rights and safety
+- As part of a corporate transaction, with notice
 
-- **The healthcare practitioner is the data controller**
-- **Eleva.care provides secure encrypted storage only**
-- We process this data ONLY on the practitioner's instructions
-- We do NOT access clinical notes without authorization
+See our [Data Processing Agreement](/legal/dpa) for the current subprocessor list and safeguards.
 
-**Legal Basis**:
+## 5) Retention (how long we keep data)
 
-- Practitioners rely on GDPR Article 9(2)(h) (healthcare provision)
-- You consent to platform storage via Article 9(2)(a) (explicit consent)
+- Account data: while your account is active; if inactive, we notify after 12 months, then delete within 24 months
+- Bookings metadata and support: about 24 months after last activity
+- Payments/invoices: up to 10 years (legal)
+- Analytics: up to 12 months (then aggregated/anonymized)
+- Security audit logs: at least 12 months
+- Backups: about 30 days (encrypted)
+- Clinical data: kept per practitioner instructions and applicable healthcare laws
 
-## 1. Information We Collect
+## 6) Your rights
 
-We collect different types of information to provide and improve our services. The information we collect includes:
+Under GDPR/LGPD you can request: access, correction, deletion, restriction, portability, and to object. If we rely on consent, you can withdraw it. You can also complain to your authority (e.g., CNPD in Portugal).
 
-**a. Personal Information**
+How to exercise your rights: email `privacy@eleva.care` or `dpo@eleva.care`. We respond within 1 month under GDPR (can extend for complex requests) and 15 days under LGPD.
 
-- **Name**
-- **Email Address**
-- **Phone Number**
-- **Payment Information** (e.g., credit card details)
-- **Medical Data** (if applicable)
-- **Address and other contact details**
+## 7) Security
 
-**b. Usage Data**
+We protect data with encryption in transit and at rest, least‑privilege access, auditing, and continuous monitoring. No system is 100% secure, but we work hard to keep your data safe. See our [Security](/legal/security) page for details.
 
-- **IP Address**
-- **Device Information**
-- **Time and Date of Use**
-- **Pages Visited on the Website**
-- **Referring URLs**
+## 8) International transfers
 
-**c. Cookies and Tracking Technologies**
-We use cookies and similar tracking technologies to track your activity on our services and store certain information. Cookies help us personalize your experience and understand how our services are used.
+We primarily host data in the EU. When data moves, we use legal safeguards (e.g., SCCs, TIAs, supplementary measures) consistent with GDPR and LGPD.
 
-You can control the use of cookies at the individual browser level, but disabling cookies may affect your ability to use certain features of our services.
+## 9) Children
 
-## 2. How We Use Your Information
+Our services are not for children under 16. For Brazil, minors are under 18; we process minors’ data only with a parent/guardian’s consent and participation (LGPD Art. 14).
 
-We use the information we collect for several purposes, including:
+## 10) Government requests
 
-- **Providing and improving our services:** To offer personalized healthcare services, appointment scheduling, and customer support.
-- **Processing payments:** To complete transactions and billing for services provided.
-- **Communicating with you:** To send you important information regarding your account, updates to services, or promotional offers (if you have opted in).
-- **Improving user experience:** To analyze trends and behavior on our platform, allowing us to enhance your experience and tailor our services to your needs.
-- **Compliance with legal obligations:** To comply with applicable laws, regulations, and legal processes.
+We require valid legal process, narrow the scope to what’s necessary, challenge overbroad/unlawful requests, and provide user notice where permitted.
 
-## 3. How We Share Your Information
+## 11) Changes
 
-We do not sell, trade, or otherwise share your personal data with third parties except in the following circumstances:
-
-- **With service providers:** We may share your information with third-party companies or individuals who provide services on our behalf, such as payment processing or hosting services. These providers are obligated to protect your information and use it solely for the purpose of performing services for us.
-- **For legal reasons:** We may disclose your personal data if required to do so by law or in response to legal processes, such as a subpoena or court order.
-- **Business transfers:** In the event of a merger, acquisition, or sale of assets, your information may be transferred as part of the transaction. We will notify you before your personal data is transferred and becomes subject to a different privacy policy.
-
-## 4. Data Retention
-
-We retain data only as long as necessary for the purposes described below or as required by law. Retention varies by data category:
-
-| Category                           | Purpose                                     | Typical Retention                                                                        |
-| ---------------------------------- | ------------------------------------------- | ---------------------------------------------------------------------------------------- |
-| Account data (name, email, phone)  | Provide and secure your account             | While account is active; if inactive: 12-month notice then deletion within 24 months     |
-| Booking and scheduling metadata    | Maintain booking history and resolve issues | 24 months after last activity (unless needed for legal obligations)                      |
-| Payment and invoicing records      | Compliance with tax and accounting laws     | Up to 10 years (statutory)                                                               |
-| Support communications             | Troubleshooting and audit trail             | 24 months after ticket closure                                                           |
-| Platform analytics                 | Improve product and reliability             | Up to 12 months (aggregated/anonymized thereafter)                                       |
-| Audit logs (security)              | Security investigations and compliance      | Minimum 12 months                                                                        |
-| Backups                            | Business continuity and disaster recovery   | ~30 days rolling encrypted backups                                                       |
-| Clinical data (notes, attachments) | Practitioner-controlled medical records     | Retained per practitioner’s instructions and applicable law (e.g., 10 years in Portugal) |
-
-For clinical data, the practitioner is the Data Controller and determines the retention period. We act as Processor and will delete or return data upon the practitioner's instruction or contract termination, consistent with our Data Processing Agreement.
-
-## 5. Your Data Protection Rights
-
-Depending on your location, you may have the following rights regarding your personal data:
-
-- **Right to access:** You can request a copy of the personal data we hold about you.
-- **Right to correction:** You can request that we correct any inaccurate or incomplete information.
-- **Right to deletion:** You can request that we delete your personal data, subject to certain exceptions.
-- **Right to restriction:** You can request that we restrict the processing of your personal data under certain circumstances.
-- **Right to data portability:** You can request a transfer of your personal data to another organization in a structured, commonly used, and machine-readable format.
-- **Right to withdraw consent:** If we rely on your consent to process your data, you can withdraw that consent at any time.
-- **Right to lodge a complaint:** You have the right to lodge a complaint with your local supervisory authority. In Portugal: CNPD (Comissão Nacional de Proteção de Dados).
-
-**Response timeframes:** We respond to requests within 1 month under GDPR (extendable by up to 2 additional months for complex requests, with notice) and within 15 days under LGPD. We may request information to verify your identity before fulfilling a request.
-
-**How to submit a request:** Email us at privacy@eleva.care or dpo@eleva.care with your request type, associated email, and preferred language. You can also contact support@eleva.care.
-
-## 6. Security of Your Data
-
-We implement appropriate technical and organizational measures to protect your personal data from unauthorized access, alteration, or destruction. However, no data transmission over the internet or electronic storage method is 100% secure, and we cannot guarantee the absolute security of your information.
-
-## 7. International Transfers
-
-If you are located outside of Portugal, please be aware that your personal data may be transferred to and processed in Portugal or other countries where Eleva.care operates. By using our services, you consent to the transfer of your data to countries that may have different data protection laws.
-
-## 8. Children's Privacy
-
-Our services are not intended for children under the age of 16, and we do not knowingly collect personal data from children. If we become aware that we have collected personal data from a child under 16 without verification of parental consent, we will take steps to remove that information.
-
-For Brazilian users (LGPD): minors are those under 18. We process minors’ data only with the consent and participation of a parent or legal guardian (LGPD Article 14). Parents/guardians may contact privacy@eleva.care to access or request deletion of minors’ data.
-
-## 9. Changes to This Privacy Policy
-
-We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated effective date. We encourage you to review this Privacy Policy periodically to stay informed about how we are protecting your information.
-
-## 10. Law Enforcement and Government Requests
-
-We carefully review and respond to government and law enforcement requests for user data. Our principles are:
-
-- We require a valid and legally binding request (e.g., court order, subpoena) before disclosing any non-public data, unless an emergency legally permits disclosure.
-- We limit disclosures to the minimum data necessary and challenge requests that are overbroad, unlawful, or conflict with EU data protection law.
-- Where permitted by law, we provide advance notice to affected users/controllers before disclosure to allow them to seek legal remedies.
-- We publish high-level information about our handling of requests upon request and maintain internal records for accountability.
-
-For more details on international transfers and safeguards, see our Data Processing Agreement.
+We’ll update this policy as needed and note the effective date. If changes are material, we’ll let you know.
 
 ---
 
-## Data Controller
+**Data Controller:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/VAT 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Phone `+351 931 897 950`.
 
-The controller responsible for processing your personal data is:
-
-- **BÚZIOS E TARTARUGAS - LDA**
-- Commercially operating as **Eleva.care**
-- NIPC/VAT: 515001708
-- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- Email: [support@eleva.care](mailto:support@eleva.care)
-- Phone: [+351 931 897 950](tel:+351931897950)
-
----
-
-## International Data Protection Compliance
-
-### GDPR Compliance (European Union)
-
-As a Portugal-based company, we fully comply with the **General Data Protection Regulation (GDPR)**. All data processing activities adhere to GDPR principles including:
-
-- **Lawfulness, fairness, and transparency**
-- **Purpose limitation**
-- **Data minimization**
-- **Accuracy**
-- **Storage limitation**
-- **Integrity and confidentiality**
-
-For detailed information on our GDPR compliance, including our Data Processing Agreement, please visit our [Data Processing Agreement](/legal/dpa).
-
-### LGPD Compliance (Brazil)
-
-We also comply with Brazil's **Lei Geral de Proteção de Dados Pessoais (LGPD)**, ensuring that Brazilian users' data is protected with the same high standards as GDPR. Our LGPD compliance includes:
-
-- **Lawful data processing bases** (LGPD Article 7)
-- **Special categories of personal data protection** (LGPD Article 11)
-- **Data subject rights** (LGPD Articles 17-22)
-- **International data transfer safeguards** (LGPD Articles 33-36)
-- **Data security measures** (LGPD Article 46)
-
-**Brazilian Users' Rights:**
-
-Under LGPD, Brazilian users have the right to:
-
-1. **Confirmation of data processing** (Article 18, I)
-2. **Access to your data** (Article 18, II)
-3. **Correction of incomplete or inaccurate data** (Article 18, III)
-4. **Anonymization, blocking, or deletion of data** (Article 18, IV)
-5. **Data portability** (Article 18, V)
-6. **Deletion of data processed with consent** (Article 18, VI)
-7. **Information about data sharing** (Article 18, VII)
-8. **Information about the possibility of not providing consent** (Article 18, VIII)
-9. **Revocation of consent** (Article 18, IX)
-
-To exercise any of these rights, please contact us at [privacy@eleva.care](mailto:privacy@eleva.care).
-
-**Data Protection Officer (DPO):**
-
-For GDPR and LGPD-related inquiries, contact our DPO at: [dpo@eleva.care](mailto:dpo@eleva.care)
+DPO: `dpo@eleva.care`.
