--- a/content/privacy/es.mdx
+++ b/content/privacy/es.mdx
@@ -1,206 +1,82 @@
 # Política de Privacidad
 
-_Fecha de Vigencia:_ 16 de abril de 2025
+_Fecha de vigencia: 16 de abril de 2025_
 
-En **Eleva.care** ("nosotros," "nuestro"), estamos comprometidos a proteger su privacidad y garantizar que su información personal se maneje de manera segura y responsable. Esta Política de Privacidad explica cómo recopilamos, usamos, divulgamos y protegemos sus datos personales cuando utiliza nuestros **servicios de plataforma tecnológica**.
+Respetamos su privacidad y lo explicamos de forma simple. Qué recopilamos, por qué, cómo lo protegemos y sus opciones.
 
-**IMPORTANTE**: Eleva.care es una **plataforma marketplace de tecnología de salud** que conecta pacientes con profesionales de salud independientes y licenciados. NO somos un proveedor de atención médica. Esta Política de Privacidad cubre cómo NOSOTROS (Eleva.care) manejamos sus datos de plataforma. Su profesional de salud tiene sus propias responsabilidades separadas para los datos médicos que crea.
+## 1) Quiénes somos y nuestro rol
 
-Al utilizar o acceder a los servicios de la plataforma Eleva.care, acepta la recopilación y uso de sus datos según se describe en esta Política de Privacidad.
+- Eleva.care es un marketplace tecnológico en salud. Conectamos clientes con profesionales independientes. No somos un proveedor de salud.
+- Actuamos como:
+  - Responsable del tratamiento para operaciones de plataforma (cuentas, reservas, pagos, soporte, analítica)
+  - Encargado del tratamiento para notas/archivos clínicos creados por profesionales (ellos son Responsables; nosotros almacenamos de forma segura)
 
-## Rol Dual de Eleva.care en el Procesamiento de Datos
+## 2) Qué recopilamos
 
-Eleva.care procesa sus datos en **dos capacidades distintas**:
+- Datos de cuenta: nombre, email, teléfono
+- Datos de reservas: agendas, historial, mensajes
+- Datos de pago: procesados por Stripe (no almacenamos tarjetas)
+- Datos de uso: dispositivo, IP, logs, analítica
+- Datos clínicos (cuando aplique): notas/archivos creados por el profesional y almacenados cifrados (el profesional controla el contenido)
 
-### Como Responsable del Tratamiento (Operaciones de la Plataforma)
+Las cookies permiten funciones esenciales y analítica. Puede gestionarlas en su navegador; algunas funciones podrían no funcionar sin cookies.
 
-Para los siguientes datos, **Eleva.care es el responsable del tratamiento**:
+## 3) Para qué usamos los datos
 
-- Su información de cuenta (nombre, correo electrónico, número de teléfono)
-- Información de reservas y programación
-- Información de pago (procesada vía Stripe)
-- Análisis de uso de la plataforma
-- Comunicaciones con nuestro equipo de soporte
+- Proveer y mejorar la plataforma
+- Reservas, pagos y soporte
+- Seguridad, prevención de fraude y cumplimiento
+- Comunicaciones que solicita u opta recibir
+- Obligaciones legales
 
-**Base Legal**: Ejecución del contrato (Artículo 6(1)(b) del RGPD)
+Bases legales: ejecución de contrato, intereses legítimos (seguridad, mejora), consentimiento (cuando corresponda) y cumplimiento legal. Para datos clínicos, los profesionales se amparan en bases de atención sanitaria (p. ej., RGPD art. 9(2)(h)); el almacenamiento puede basarse en su consentimiento explícito.
 
-### Como Encargado del Tratamiento (Almacenamiento de Datos Clínicos)
+## 4) Compartición
 
-Para notas de sesión clínicas y registros médicos creados por los profesionales:
+- Con encargados que nos ayudan a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Actúan bajo contrato y no pueden usar datos para fines propios.
+- Si la ley lo requiere o para proteger derechos y seguridad
+- En una transacción corporativa, con aviso previo
 
-- **El profesional de salud es el responsable del tratamiento**
-- **Eleva.care proporciona solo almacenamiento cifrado seguro**
-- Procesamos estos datos SOLO bajo las instrucciones del profesional
-- NO accedemos a notas clínicas sin autorización
+Vea nuestro [Acuerdo de Procesamiento de Datos](/legal/dpa) para la lista de subencargados y salvaguardas.
 
-**Base Legal**:
+## 5) Conservación (tiempos)
 
-- Los profesionales se basan en el Artículo 9(2)(h) del RGPD (prestación de atención médica)
-- Usted consiente el almacenamiento en la plataforma vía Artículo 9(2)(a) (consentimiento explícito)
+- Cuenta: mientras esté activa; si inactiva, avisamos a los 12 meses y eliminamos dentro de 24 meses
+- Metadatos de reservas y soporte: ~24 meses tras la última actividad
+- Pagos/facturas: hasta 10 años (legal)
+- Analítica: hasta 12 meses (luego agregado/anonimizado)
+- Logs de seguridad: mínimo 12 meses
+- Backups: ~30 días (cifrados)
+- Datos clínicos: según instrucciones del profesional y leyes sanitarias
 
-## 1. Información que Recopilamos
+## 6) Sus derechos
 
-Recopilamos diferentes tipos de información para proporcionar y mejorar nuestros servicios. La información que recopilamos incluye:
+Bajo RGPD/LGPD puede solicitar: acceso, rectificación, borrado, limitación, portabilidad y oponerse. Si dependemos del consentimiento, puede retirarlo. También puede reclamar ante su autoridad (p. ej., CNPD en Portugal).
 
-**a. Información Personal**
+Cómo ejercerlos: `privacy@eleva.care` o `dpo@eleva.care`. Respondemos en 1 mes (RGPD, ampliable para casos complejos) y 15 días (LGPD).
 
-- **Nombre**
-- **Dirección de Correo Electrónico**
-- **Número de Teléfono**
-- **Información de Pago** (por ejemplo, detalles de tarjeta de crédito)
-- **Datos Médicos** (si aplica)
-- **Dirección y otros detalles de contacto**
+## 7) Seguridad
 
-**b. Datos de Uso**
+Ciframos en tránsito y en reposo, aplicamos mínimo privilegio, auditoría y monitorización continua. Ningún sistema es 100% seguro, pero trabajamos para proteger sus datos. Vea nuestra página de [Seguridad](/legal/security).
 
-- **Dirección IP**
-- **Información del Dispositivo**
-- **Hora y Fecha de Uso**
-- **Páginas Visitadas en el Sitio Web**
-- **URLs de Referencia**
+## 8) Transferencias internacionales
 
-**c. Cookies y Tecnologías de Seguimiento**
+Alojamos principalmente en la UE. Cuando hay transferencias, usamos garantías legales (SCCs, TIAs y medidas complementarias) conforme RGPD/LGPD.
 
-Utilizamos cookies y tecnologías de seguimiento similares para rastrear su actividad en nuestros servicios y almacenar cierta información. Las cookies nos ayudan a personalizar su experiencia y comprender cómo se utilizan nuestros servicios.
+## 9) Menores
 
-Puede controlar el uso de cookies a nivel del navegador individual, pero deshabilitar las cookies puede afectar su capacidad para usar ciertas funciones de nuestros servicios.
+Nuestros servicios no están dirigidos a menores de 16. En Brasil, menores < 18; tratamos datos solo con consentimiento y participación de padre/madre o tutor (LGPD art. 14).
 
-## 2. Cómo Usamos Su Información
+## 10) Requerimientos gubernamentales
 
-Utilizamos la información que recopilamos para varios propósitos, incluyendo:
+Exigimos proceso legal válido, limitamos el alcance a lo necesario, impugnamos solicitudes excesivas/ilegales y notificamos cuando la ley lo permite.
 
-- **Proporcionar y mejorar nuestros servicios:** Para ofrecer servicios de salud personalizados, programación de citas y atención al cliente.
-- **Procesar pagos:** Para completar transacciones y facturación de servicios proporcionados.
-- **Comunicarnos con usted:** Para enviarle información importante sobre su cuenta, actualizaciones de servicios u ofertas promocionales (si ha optado por recibirlas).
-- **Mejorar la experiencia del usuario:** Para analizar tendencias y comportamiento en nuestra plataforma, permitiéndonos mejorar su experiencia y adaptar nuestros servicios a sus necesidades.
-- **Cumplimiento de obligaciones legales:** Para cumplir con leyes, regulaciones y procesos legales aplicables.
+## 11) Cambios
 
-## 3. Cómo Compartimos Su Información
-
-No vendemos, intercambiamos ni compartimos de otro modo sus datos personales con terceros, excepto en las siguientes circunstancias:
-
-- **Con proveedores de servicios:** Podemos compartir su información con empresas o individuos terceros que proporcionan servicios en nuestro nombre, como procesamiento de pagos o servicios de alojamiento. Estos proveedores están obligados a proteger su información y usarla solo con el propósito de realizar servicios para nosotros.
-- **Por razones legales:** Podemos divulgar sus datos personales si es requerido por ley o en respuesta a procesos legales, como una citación u orden judicial.
-- **Transferencias comerciales:** En caso de una fusión, adquisición o venta de activos, su información puede ser transferida como parte de la transacción. Le notificaremos antes de que sus datos personales sean transferidos y queden sujetos a una política de privacidad diferente.
-
-## 4. Retención de Datos
-
-Conservamos los datos solo durante el tiempo necesario para los fines descritos a continuación o según lo exija la ley. La retención varía por categoría de datos:
-
-| Categoría                             | Finalidad                                       | Plazo típico de conservación                                                                  |
-| ------------------------------------- | ----------------------------------------------- | --------------------------------------------------------------------------------------------- |
-| Datos de cuenta (nombre, email, tel.) | Proporcionar y asegurar su cuenta               | Mientras la cuenta esté activa; si está inactiva: aviso de 12 meses y eliminación en 24 meses |
-| Metadatos de reservas y programación  | Mantener historial y resolver incidencias       | 24 meses tras la última actividad (salvo obligaciones legales)                                |
-| Registros de pago y facturación       | Cumplimiento fiscal y contable                  | Hasta 10 años (legal)                                                                         |
-| Comunicaciones de soporte             | Resolución de incidencias y trazabilidad        | 24 meses tras el cierre del ticket                                                            |
-| Analítica de plataforma               | Mejorar producto y fiabilidad                   | Hasta 12 meses (luego agregado/anonimizado)                                                   |
-| Registros de auditoría (seguridad)    | Investigaciones de seguridad y cumplimiento     | Mínimo 12 meses                                                                               |
-| Copias de seguridad                   | Continuidad de negocio y recuperación           | ~30 días de copias cifradas en rotación                                                       |
-| Datos clínicos (notas, adjuntos)      | Historias clínicas bajo control del profesional | Según instrucciones del profesional y la ley aplicable (p. ej., 10 años en Portugal)          |
-
-Para los datos clínicos, el profesional es el Responsable del Tratamiento y determina el período de conservación. Nosotros actuamos como Encargado y eliminaremos o devolveremos los datos conforme a las instrucciones del profesional o a la terminación del contrato, de acuerdo con nuestro Acuerdo de Procesamiento de Datos.
-
-## 5. Sus Derechos de Protección de Datos
-
-Dependiendo de su ubicación, puede tener los siguientes derechos con respecto a sus datos personales:
-
-- **Derecho de acceso:** Puede solicitar una copia de los datos personales que tenemos sobre usted.
-- **Derecho de rectificación:** Puede solicitar que corrijamos cualquier información inexacta o incompleta.
-- **Derecho al borrado:** Puede solicitar que eliminemos sus datos personales, sujeto a ciertas excepciones.
-- **Derecho a la limitación:** Puede solicitar que limitemos el procesamiento de sus datos personales bajo ciertas circunstancias.
-- **Derecho a la portabilidad de datos:** Puede solicitar una transferencia de sus datos personales a otra organización en un formato estructurado, de uso común y legible por máquina.
-- **Derecho a retirar el consentimiento:** Si nos basamos en su consentimiento para procesar sus datos, puede retirar ese consentimiento en cualquier momento.
-- **Derecho a presentar una reclamación:** Puede presentar una reclamación ante su autoridad de control local. En Portugal: CNPD (Comissão Nacional de Proteção de Dados).
-
-**Plazos de respuesta:** Respondemos en un plazo de 1 mes según el RGPD (prorrogable hasta 2 meses adicionales para solicitudes complejas, con aviso) y en 15 días según la LGPD. Podemos solicitar información para verificar su identidad antes de atender la solicitud.
-
-**Cómo enviar su solicitud:** Escríbanos a privacy@eleva.care o dpo@eleva.care indicando el tipo de solicitud, el email asociado y su idioma preferido. También puede contactar a support@eleva.care.
-
-## 6. Seguridad de Sus Datos
-
-Implementamos medidas técnicas y organizativas apropiadas para proteger sus datos personales contra acceso no autorizado, alteración o destrucción. Sin embargo, ninguna transmisión de datos por internet o método de almacenamiento electrónico es 100% seguro, y no podemos garantizar la seguridad absoluta de su información.
-
-## 7. Transferencias Internacionales
-
-Si está ubicado fuera de Portugal, tenga en cuenta que sus datos personales pueden ser transferidos a y procesados en Portugal u otros países donde Eleva.care opera. Al utilizar nuestros servicios, consiente la transferencia de sus datos a países que pueden tener leyes de protección de datos diferentes.
-
-## 8. Privacidad de los Niños
-
-Nuestros servicios no están destinados a niños menores de 16 años, y no recopilamos intencionalmente datos personales de niños. Si nos enteramos de que hemos recopilado datos personales de un niño menor de 16 años sin verificación del consentimiento parental, tomaremos medidas para eliminar esa información.
-
-Para usuarios brasileños (LGPD): los menores son quienes tienen menos de 18 años. Tratamos datos de menores únicamente con el consentimiento y participación de un padre/madre o tutor legal (LGPD Artículo 14). Padres/tutores pueden contactar a privacy@eleva.care para acceder o solicitar la eliminación de los datos de menores.
-
-## 9. Cambios a Esta Política de Privacidad
-
-Podemos actualizar esta Política de Privacidad periódicamente. Cualquier cambio será publicado en esta página con una fecha de vigencia actualizada. Le recomendamos revisar esta Política de Privacidad periódicamente para mantenerse informado sobre cómo estamos protegiendo su información.
-
-## 10. Solicitudes de Autoridades y Fuerzas del Orden
-
-Revisamos cuidadosamente y respondemos a solicitudes gubernamentales y de fuerzas del orden para obtener datos de usuarios. Nuestros principios son:
-
-- Requerimos una solicitud válida y legalmente vinculante (p. ej., orden judicial, citación) antes de divulgar datos no públicos, salvo emergencia que lo permita legalmente.
-- Limitamos las divulgaciones a los datos mínimos necesarios y cuestionamos solicitudes excesivas, ilegales o incompatibles con el RGPD.
-- Cuando la ley lo permita, avisamos previamente a los usuarios/responsables afectados antes de la divulgación, para que puedan ejercer recursos legales.
-- Mantenemos registros internos y podemos proporcionar información de alto nivel sobre cómo gestionamos estas solicitudes.
-
-Para más detalles sobre transferencias internacionales y salvaguardas, consulte nuestro Acuerdo de Procesamiento de Datos.
+Actualizaremos esta política según sea necesario y marcaremos la fecha de vigencia. Avisaremos cambios materiales.
 
 ---
 
-## Responsable del Tratamiento
+**Responsable del tratamiento:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Tel. `+351 931 897 950`.
 
-El responsable del procesamiento de sus datos personales es:
-
-- **BÚZIOS E TARTARUGAS - LDA**
-- Operando comercialmente como **Eleva.care**
-- NIPC/NIF: 515001708
-- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- Email: [support@eleva.care](mailto:support@eleva.care)
-- Teléfono: [+351 931 897 950](tel:+351931897950)
-
----
-
-## Cumplimiento Internacional de Protección de Datos
-
-### Cumplimiento del RGPD (Unión Europea)
-
-Como empresa con sede en Portugal, cumplimos plenamente con el **Reglamento General de Protección de Datos (RGPD)**. Todas las actividades de procesamiento de datos se adhieren a los principios del RGPD, incluyendo:
-
-- **Legalidad, lealtad y transparencia**
-- **Limitación de la finalidad**
-- **Minimización de datos**
-- **Exactitud**
-- **Limitación del plazo de conservación**
-- **Integridad y confidencialidad**
-
-Para información detallada sobre nuestro cumplimiento del RGPD, incluido nuestro Acuerdo de Procesamiento de Datos, visite nuestro [Acuerdo de Procesamiento de Datos](/legal/dpa).
-
-### Cumplimiento de la LGPD (Brasil)
-
-También cumplimos con la **Lei Geral de Proteção de Dados Pessoais (LGPD)** de Brasil, garantizando que los datos de los usuarios brasileños estén protegidos con los mismos altos estándares que el RGPD. Nuestro cumplimiento de la LGPD incluye:
-
-- **Bases legales para el procesamiento de datos** (LGPD Artículo 7)
-- **Protección de categorías especiales de datos personales** (LGPD Artículo 11)
-- **Derechos de los titulares de datos** (LGPD Artículos 17-22)
-- **Salvaguardias para la transferencia internacional de datos** (LGPD Artículos 33-36)
-- **Medidas de seguridad de datos** (LGPD Artículo 46)
-
-**Derechos de los Usuarios Brasileños:**
-
-Bajo la LGPD, los usuarios brasileños tienen derecho a:
-
-1. **Confirmación del procesamiento de datos** (Artículo 18, I)
-2. **Acceso a sus datos** (Artículo 18, II)
-3. **Corrección de datos incompletos o inexactos** (Artículo 18, III)
-4. **Anonimización, bloqueo o eliminación de datos** (Artículo 18, IV)
-5. **Portabilidad de datos** (Artículo 18, V)
-6. **Eliminación de datos procesados con consentimiento** (Artículo 18, VI)
-7. **Información sobre el intercambio de datos** (Artículo 18, VII)
-8. **Información sobre la posibilidad de no otorgar consentimiento** (Artículo 18, VIII)
-9. **Revocación del consentimiento** (Artículo 18, IX)
-
-Para ejercer cualquiera de estos derechos, póngase en contacto con nosotros en [privacy@eleva.care](mailto:privacy@eleva.care).
-
-**Delegado de Protección de Datos (DPO):**
-
-Para consultas relacionadas con el RGPD y la LGPD, contacte a nuestro DPO en: [dpo@eleva.care](mailto:dpo@eleva.care)
+DPO: `dpo@eleva.care`.
