--- a/content/privacy/pt.mdx
+++ b/content/privacy/pt.mdx
@@ -1,206 +1,82 @@
 # Política de Privacidade
 
-_Data de Vigência:_ 16 de abril de 2025
+_Data de vigência: 16 de abril de 2025_
 
-Na **Eleva.care** ("nós," "nosso"), estamos comprometidos em proteger a sua privacidade e garantir que as suas informações pessoais sejam tratadas de forma segura e responsável. Esta Política de Privacidade explica como recolhemos, utilizamos, divulgamos e protegemos os seus dados pessoais quando utiliza os nossos **serviços de plataforma tecnológica**.
+Respeitamos a sua privacidade. Explicamos de forma simples o que recolhemos, porquê, como protegemos e as suas escolhas.
 
-**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia para saúde** que conecta pacientes com profissionais de saúde independentes e licenciados. NÃO somos um prestador de cuidados de saúde. Esta Política de Privacidade cobre como NÓS (Eleva.care) tratamos os seus dados da plataforma. O seu profissional de saúde tem as suas próprias responsabilidades separadas para os dados médicos que cria.
+## 1) Quem somos e o nosso papel
 
-Ao utilizar ou aceder aos serviços da plataforma Eleva.care, concorda com a recolha e utilização dos seus dados conforme descrito nesta Política de Privacidade.
+- A Eleva.care é um marketplace tecnológico em saúde. Ligamos clientes a profissionais independentes. Não somos prestador de saúde.
+- Atuamos como:
+  - Responsável pelo tratamento para operações da plataforma (contas, marcações, pagamentos, suporte, analítica)
+  - Subcontratante para notas/ficheiros clínicos criados por profissionais (eles são Responsáveis; nós armazenamos em segurança)
 
-## Papel Dual da Eleva.care no Processamento de Dados
+## 2) O que recolhemos
 
-A Eleva.care processa os seus dados em **duas capacidades distintas**:
+- Dados de conta: nome, email, telefone
+- Dados de marcações: agendas, histórico, mensagens
+- Dados de pagamento: processados pelo Stripe (não guardamos cartões)
+- Dados de utilização: dispositivo, IP, registos, analítica
+- Dados clínicos (quando aplicável): notas/ficheiros criados pelo profissional e armazenados cifrados (o profissional controla o conteúdo)
 
-### Como Responsável pelo Tratamento (Operações da Plataforma)
+Cookies suportam funcionalidades essenciais e analítica. Pode geri‑las no navegador; algumas funcionalidades podem não funcionar sem cookies.
 
-Para os seguintes dados, **a Eleva.care é o responsável pelo tratamento**:
+## 3) Para que usamos os dados
 
-- As suas informações de conta (nome, email, número de telefone)
-- Informações de marcação e agendamento
-- Informações de pagamento (processadas via Stripe)
-- Análises de utilização da plataforma
-- Comunicações com a nossa equipa de suporte
+- Prestar e melhorar a plataforma
+- Marcações, pagamentos e suporte
+- Segurança, prevenção de fraude e conformidade
+- Comunicações que solicita ou opta por receber
+- Obrigações legais
 
-**Base Legal**: Execução do contrato (Artigo 6(1)(b) do RGPD)
+Bases legais: execução de contrato, interesses legítimos (segurança, melhoria), consentimento (quando necessário) e cumprimento legal. Para dados clínicos, os profissionais baseiam‑se em bases de cuidados de saúde (p. ex., RGPD art. 9.º, n.º 2, al. h)); o armazenamento pode também basear‑se no seu consentimento explícito.
 
-### Como Subcontratante (Armazenamento de Dados Clínicos)
+## 4) Partilha
 
-Para notas de sessão clínicas e registos médicos criados pelos profissionais:
+- Com subcontratantes que ajudam a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
+- Se exigido por lei ou para proteger direitos e segurança
+- Numa transação societária, com aviso
 
-- **O profissional de saúde é o responsável pelo tratamento**
-- **A Eleva.care fornece apenas armazenamento encriptado seguro**
-- Processamos estes dados APENAS sob as instruções do profissional
-- NÃO acedemos a notas clínicas sem autorização
+Veja o nosso [Acordo de Processamento de Dados](/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
 
-**Base Legal**:
+## 5) Conservação (prazos)
 
-- Os profissionais baseiam-se no Artigo 9(2)(h) do RGPD (prestação de cuidados de saúde)
-- Você consente com o armazenamento na plataforma via Artigo 9(2)(a) (consentimento explícito)
+- Conta: enquanto ativa; se inativa, notificamos após 12 meses e eliminamos em 24 meses
+- Metadados de marcações e suporte: ~24 meses após a última atividade
+- Pagamentos/faturas: até 10 anos (legal)
+- Analítica: até 12 meses (depois agregado/anonimizado)
+- Registos de segurança: mínimo 12 meses
+- Backups: ~30 dias (cifrados)
+- Dados clínicos: conforme instruções do profissional e leis de saúde
 
-## 1. Informação que Recolhemos
+## 6) Os seus direitos
 
-Recolhemos diferentes tipos de informação para fornecer e melhorar os nossos serviços. A informação que recolhemos inclui:
+Ao abrigo do RGPD/LGPD pode solicitar: acesso, retificação, apagamento, limitação, portabilidade e oposição. Se dependermos do consentimento, pode retirá‑lo. Pode também reclamar à sua autoridade (p. ex., CNPD em Portugal).
 
-**a. Informação Pessoal**
+Como exercer: `privacy@eleva.care` ou `dpo@eleva.care`. Respondemos em 1 mês (RGPD, extensível em pedidos complexos) e 15 dias (LGPD).
 
-- **Nome**
-- **Endereço de Email**
-- **Número de Telefone**
-- **Informações de Pagamento** (por exemplo, detalhes de cartão de crédito)
-- **Dados Médicos** (se aplicável)
-- **Morada e outros detalhes de contacto**
+## 7) Segurança
 
-**b. Dados de Utilização**
+Ciframos em trânsito e em repouso, aplicamos menor privilégio, auditoria e monitorização contínua. Nenhum sistema é 100% seguro, mas trabalhamos para proteger os seus dados. Veja a página de [Segurança](/legal/security).
 
-- **Endereço IP**
-- **Informação do Dispositivo**
-- **Hora e Data de Utilização**
-- **Páginas Visitadas no Website**
-- **URLs de Referência**
+## 8) Transferências internacionais
 
-**c. Cookies e Tecnologias de Rastreamento**
+Alojamos principalmente na UE. Quando há transferências, usamos salvaguardas legais (SCCs, TIAs e medidas suplementares) de acordo com o RGPD/LGPD.
 
-Utilizamos cookies e tecnologias de rastreamento semelhantes para acompanhar a sua atividade nos nossos serviços e armazenar certas informações. Os cookies ajudam-nos a personalizar a sua experiência e compreender como os nossos serviços são utilizados.
+## 9) Menores
 
-Pode controlar o uso de cookies ao nível do navegador individual, mas desativar cookies pode afetar a sua capacidade de utilizar certas funcionalidades dos nossos serviços.
+Os nossos serviços não se destinam a menores de 16. No Brasil, menores < 18; tratamos dados apenas com consentimento e participação de pai/mãe ou tutor (LGPD art. 14).
 
-## 2. Como Utilizamos a Sua Informação
+## 10) Pedidos governamentais
 
-Utilizamos a informação que recolhemos para vários propósitos, incluindo:
+Exigimos processo legal válido, limitamos o âmbito ao necessário, contestamos pedidos excessivos/ilegais e notificamos quando a lei permite.
 
-- **Fornecer e melhorar os nossos serviços:** Para oferecer serviços de saúde personalizados, agendamento de consultas e apoio ao cliente.
-- **Processar pagamentos:** Para completar transações e faturação de serviços fornecidos.
-- **Comunicar consigo:** Para lhe enviar informações importantes relativamente à sua conta, atualizações de serviços ou ofertas promocionais (se optou por recebê-las).
-- **Melhorar a experiência do utilizador:** Para analisar tendências e comportamento na nossa plataforma, permitindo-nos melhorar a sua experiência e adaptar os nossos serviços às suas necessidades.
-- **Cumprimento de obrigações legais:** Para cumprir com leis, regulamentos e processos legais aplicáveis.
+## 11) Alterações
 
-## 3. Como Partilhamos a Sua Informação
-
-Não vendemos, trocamos ou partilhamos de outra forma os seus dados pessoais com terceiros, exceto nas seguintes circunstâncias:
-
-- **Com prestadores de serviços:** Podemos partilhar a sua informação com empresas ou indivíduos terceiros que fornecem serviços em nosso nome, tais como processamento de pagamentos ou serviços de hospedagem. Estes prestadores são obrigados a proteger a sua informação e utilizá-la apenas com o propósito de realizar serviços para nós.
-- **Por razões legais:** Podemos divulgar os seus dados pessoais se tal for exigido por lei ou em resposta a processos legais, tais como uma intimação ou ordem judicial.
-- **Transferências comerciais:** No caso de uma fusão, aquisição ou venda de ativos, a sua informação pode ser transferida como parte da transação. Notificá-lo-emos antes de os seus dados pessoais serem transferidos e ficarem sujeitos a uma política de privacidade diferente.
-
-## 4. Retenção de Dados
-
-Conservamos dados apenas pelo tempo necessário para os fins abaixo ou conforme exigido por lei. A retenção varia por categoria de dados:
-
-| Categoria                              | Finalidade                                     | Retenção Típica                                                                        |
-| -------------------------------------- | ---------------------------------------------- | -------------------------------------------------------------------------------------- |
-| Dados de conta (nome, email, telefone) | Fornecer e proteger a sua conta                | Enquanto a conta estiver ativa; se inativa: aviso de 12 meses e eliminação em 24 meses |
-| Metadados de marcações e agendamento   | Manter histórico e resolver incidências        | 24 meses após a última atividade (salvo obrigações legais)                             |
-| Registos de pagamento e faturação      | Cumprimento fiscal e contabilístico            | Até 10 anos (legal)                                                                    |
-| Comunicações de suporte                | Resolução de incidências e trilha de auditoria | 24 meses após o fecho do ticket                                                        |
-| Analítica de plataforma                | Melhorar produto e fiabilidade                 | Até 12 meses (depois agregado/anonimizado)                                             |
-| Registos de auditoria (segurança)      | Investigações de segurança e conformidade      | Mínimo 12 meses                                                                        |
-| Cópias de segurança                    | Continuidade de negócio e recuperação          | ~30 dias de cópias encriptadas em rotação                                              |
-| Dados clínicos (notas, anexos)         | Registos médicos sob controlo do profissional  | Conforme instruções do profissional e a lei aplicável (p. ex., 10 anos em Portugal)    |
-
-Para dados clínicos, o profissional é o Responsável pelo Tratamento e determina o período de retenção. Atuamos como Subcontratante e eliminaremos ou devolveremos os dados conforme instrução do profissional ou cessação do contrato, de acordo com o nosso Acordo de Processamento de Dados.
-
-## 5. Os Seus Direitos de Proteção de Dados
-
-Dependendo da sua localização, pode ter os seguintes direitos relativamente aos seus dados pessoais:
-
-- **Direito de acesso:** Pode solicitar uma cópia dos dados pessoais que detemos sobre si.
-- **Direito de retificação:** Pode solicitar que corrijamos qualquer informação imprecisa ou incompleta.
-- **Direito ao apagamento:** Pode solicitar que eliminemos os seus dados pessoais, sujeito a certas exceções.
-- **Direito à limitação:** Pode solicitar que limitemos o processamento dos seus dados pessoais sob certas circunstâncias.
-- **Direito à portabilidade dos dados:** Pode solicitar uma transferência dos seus dados pessoais para outra organização num formato estruturado, de uso comum e legível por máquina.
-- **Direito de retirar o consentimento:** Se nos baseamos no seu consentimento para processar os seus dados, pode retirar esse consentimento a qualquer momento.
-- **Direito de apresentar reclamação:** Pode apresentar reclamação junto da sua autoridade de controlo local. Em Portugal: CNPD (Comissão Nacional de Proteção de Dados).
-
-**Prazos de resposta:** Respondemos no prazo de 1 mês ao abrigo do RGPD (prorrogável até 2 meses adicionais para pedidos complexos, com aviso) e em 15 dias ao abrigo da LGPD. Podemos solicitar informações para verificar a sua identidade antes de satisfazer o pedido.
-
-**Como enviar o seu pedido:** Envie email para privacy@eleva.care ou dpo@eleva.care indicando o tipo de pedido, o email associado e o idioma preferido. Também pode contactar support@eleva.care.
-
-## 6. Segurança dos Seus Dados
-
-Implementamos medidas técnicas e organizacionais apropriadas para proteger os seus dados pessoais contra acesso não autorizado, alteração ou destruição. No entanto, nenhuma transmissão de dados pela internet ou método de armazenamento eletrónico é 100% seguro, e não podemos garantir a segurança absoluta da sua informação.
-
-## 7. Transferências Internacionais
-
-Se estiver localizado fora de Portugal, esteja ciente de que os seus dados pessoais podem ser transferidos para e processados em Portugal ou outros países onde a Eleva.care opera. Ao utilizar os nossos serviços, consente com a transferência dos seus dados para países que podem ter leis de proteção de dados diferentes.
-
-## 8. Privacidade de Crianças
-
-Os nossos serviços não se destinam a crianças com menos de 16 anos, e não recolhemos intencionalmente dados pessoais de crianças. Se tomarmos conhecimento de que recolhemos dados pessoais de uma criança com menos de 16 anos sem verificação do consentimento parental, tomaremos medidas para remover essa informação.
-
-Para utilizadores brasileiros (LGPD): menores são aqueles com menos de 18 anos. Tratamos dados de menores apenas com o consentimento e participação de um dos pais ou tutor legal (LGPD Artigo 14). Pais/tutores podem contactar privacy@eleva.care para aceder ou solicitar a eliminação dos dados de menores.
-
-## 9. Alterações a Esta Política de Privacidade
-
-Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão publicadas nesta página com uma data de vigência atualizada. Encorajamos a rever esta Política de Privacidade periodicamente para se manter informado sobre como estamos a proteger a sua informação.
-
-## 10. Pedidos de Autoridades e Forças da Ordem
-
-Analisamos cuidadosamente e respondemos a pedidos governamentais e das forças da ordem para obtenção de dados de utilizadores. Os nossos princípios são:
-
-- Exigimos um pedido válido e legalmente vinculativo (p. ex., mandado judicial, intimação) antes de divulgar dados não públicos, salvo emergência que o permita por lei.
-- Limitamos as divulgações ao mínimo necessário e contestamos pedidos excessivos, ilegais ou incompatíveis com o RGPD.
-- Quando a lei o permita, notificamos previamente os utilizadores/responsáveis afetados antes da divulgação, para que possam exercer meios legais.
-- Mantemos registos internos e podemos disponibilizar informação de alto nível sobre como tratamos estes pedidos.
-
-Para mais detalhes sobre transferências internacionais e salvaguardas, consulte o nosso Acordo de Processamento de Dados.
+Atualizaremos esta política quando necessário e indicaremos a data de vigência. Avisaremos alterações materiais.
 
 ---
 
-## Responsável pelo Tratamento
+**Responsável pelo tratamento:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Telefone `+351 931 897 950`.
 
-O responsável pelo processamento dos seus dados pessoais é:
-
-- **BÚZIOS E TARTARUGAS - LDA**
-- Operando comercialmente como **Eleva.care**
-- NIPC/NIF: 515001708
-- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- Email: [support@eleva.care](mailto:support@eleva.care)
-- Telefone: [+351 931 897 950](tel:+351931897950)
-
----
-
-## Conformidade Internacional com a Proteção de Dados
-
-### Conformidade com o RGPD (União Europeia)
-
-Como empresa sediada em Portugal, cumprimos integralmente o **Regulamento Geral sobre a Proteção de Dados (RGPD)**. Todas as atividades de processamento de dados seguem os princípios do RGPD, incluindo:
-
-- **Legalidade, lealdade e transparência**
-- **Limitação das finalidades**
-- **Minimização dos dados**
-- **Exatidão**
-- **Limitação da conservação**
-- **Integridade e confidencialidade**
-
-Para informações detalhadas sobre a nossa conformidade com o RGPD, incluindo o nosso Acordo de Processamento de Dados, visite o nosso [Acordo de Processamento de Dados](/legal/dpa).
-
-### Conformidade com a LGPD (Brasil)
-
-Também cumprimos a **Lei Geral de Proteção de Dados Pessoais (LGPD)** do Brasil, garantindo que os dados dos utilizadores brasileiros sejam protegidos com os mesmos padrões elevados do RGPD. A nossa conformidade com a LGPD inclui:
-
-- **Bases legais para processamento de dados** (LGPD Artigo 7)
-- **Proteção de categorias especiais de dados pessoais** (LGPD Artigo 11)
-- **Direitos dos titulares de dados** (LGPD Artigos 17-22)
-- **Salvaguardas para transferência internacional de dados** (LGPD Artigos 33-36)
-- **Medidas de segurança de dados** (LGPD Artigo 46)
-
-**Direitos dos Utilizadores Brasileiros:**
-
-Ao abrigo da LGPD, os utilizadores brasileiros têm o direito de:
-
-1. **Confirmação do processamento de dados** (Artigo 18, I)
-2. **Acesso aos seus dados** (Artigo 18, II)
-3. **Correção de dados incompletos ou incorretos** (Artigo 18, III)
-4. **Anonimização, bloqueio ou eliminação de dados** (Artigo 18, IV)
-5. **Portabilidade de dados** (Artigo 18, V)
-6. **Eliminação de dados processados com consentimento** (Artigo 18, VI)
-7. **Informação sobre partilha de dados** (Artigo 18, VII)
-8. **Informação sobre a possibilidade de não fornecer consentimento** (Artigo 18, VIII)
-9. **Revogação do consentimento** (Artigo 18, IX)
-
-Para exercer qualquer um destes direitos, contacte-nos através de [privacy@eleva.care](mailto:privacy@eleva.care).
-
-**Encarregado de Proteção de Dados (DPO):**
-
-Para questões relacionadas com o RGPD e a LGPD, contacte o nosso DPO através de: [dpo@eleva.care](mailto:dpo@eleva.care)
+DPO: `dpo@eleva.care`.
