--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -1,231 +1,80 @@
 # Políticas de Pagamento
 
-_Data de Vigência:_ 3 de junho de 2025
+_Data de vigência: 3 de junho de 2025_
 
-Estas Políticas de Pagamento regem todas as transações financeiras conduzidas através da plataforma Eleva.care. Ao utilizar os nossos serviços de pagamento, concorda em estar vinculado a estas políticas, para além dos nossos Termos e Condições.
+Aqui explicamos como funcionam os pagamentos na Eleva.care de forma simples.
 
-**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia**. Os pagamentos processados através da nossa plataforma são para serviços fornecidos por **profissionais de saúde independentes e licenciados**. A Eleva.care facilita o processamento de pagamentos, mas não fornece serviços médicos. Cobramos uma taxa de serviço da plataforma para manter e operar a nossa infraestrutura de tecnologia, marketing e suporte.
+## 1) O que está a pagar
 
-## 1. Papel da Plataforma nos Pagamentos
+- A Eleva.care é um marketplace tecnológico. Os pagamentos vão para profissionais independentes e licenciados pelos seus serviços.
+- O preço apresentado inclui tudo (sem custos ocultos):
+  - O profissional recebe 85% do preço da consulta
+  - A Eleva.care retém 15% como taxa de plataforma (tecnologia, infraestrutura, suporte, marketing, taxas Stripe)
 
-### 1.1 Facilitação de Pagamentos
+Exemplo €100: Profissional €85, Taxa de plataforma €15.
 
-- A Eleva.care fornece a plataforma tecnológica para processamento seguro de pagamentos
-- Os pagamentos são feitos AOS profissionais de saúde independentes PELOS seus serviços médicos
-- Processamos pagamentos de forma segura via Stripe e Stripe Connect
-- NÃO somos o prestador de serviços médicos
-- NÃO somos responsáveis pela qualidade dos serviços médicos prestados
+## 2) Métodos de pagamento
 
-### 1.2 O Que Está a Pagar
-
-Quando faz um pagamento através da Eleva.care:
-
-- **Taxa de Serviço do Profissional**: Pagamento pela consulta/serviço do profissional de saúde (85%)
-- **Taxa de Serviço da Plataforma**: Taxa de 15% pela utilização da tecnologia de marcação, processamento de pagamentos e plataforma da Eleva.care
-
-**Exemplo**: Para uma consulta de €100:
-
-- O profissional recebe: €85,00
-- Taxa de serviço da plataforma: €15,00 (cobre tecnologia, marketing, vendas, infraestrutura e taxas do Stripe)
-
-O preço total apresentado na marcação inclui todas as taxas. Sem custos ocultos.
-
-## 2. Métodos de Pagamento
-
-A Eleva.care aceita vários métodos de pagamento, incluindo:
-
-- Cartões de crédito e débito (Visa, Mastercard, American Express)
+- Cartões (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3. Políticas de Pagamento Multibanco
+## 3) Regras Multibanco (quando paga com 8+ dias de antecedência)
 
-### 3.1 Restrições de Janela de Pagamento
+- Não disponível para consultas que ocorram em ≤8 dias
+- Se a consulta for em 8+ dias, reservamos o horário por 7 dias enquanto paga
+- Tem 7 dias completos para concluir o pagamento
+- Enviamos lembretes no dia 3 e dia 6 com instruções (ATM, homebanking, MB WAY)
 
-- **Consultas dentro de 8 dias**: Pagamentos Multibanco **não estão disponíveis** para consultas marcadas dentro de 8 dias do momento atual
-- **Consultas com 8+ dias de antecedência**: Pagamentos Multibanco são aceites com termos especiais descritos abaixo
+Pagamentos Multibanco tardios (após 7 dias): se o horário já não estiver disponível ou violar regras do profissional, reembolsamos automaticamente 90% (retenção de 10% como taxa de processamento).
 
-### 3.2 Sistema de Reserva de Horário
+## 4) Reembolsos por conflitos (Multibanco tardio)
 
-Ao pagar com Multibanco para consultas marcadas com 8 ou mais dias de antecedência:
+- Reembolso automático: 90% devolvido, 10% retido como processamento
+- Prazo de reembolso: normalmente 5–10 dias úteis (via Stripe)
+- Notificamos por email
 
-- O seu horário de consulta é **reservado por 7 dias** a partir do momento da marcação
-- Tem **7 dias completos** para completar o pagamento Multibanco
-- Se o pagamento não for recebido dentro de 7 dias, a reserva de horário expira e fica disponível para outros pacientes
+Se houve erro do sistema ou caso excecional, contacte o suporte em 48h com a referência; analisamos em 2 dias úteis.
 
-### 3.3 Sistema de Lembretes de Pagamento
+## 5) Escolher método de pagamento
 
-Para ajudar a garantir que não perde o prazo de pagamento:
+- Cartão (instantâneo):
+  - Melhor para consultas em ≤8 dias, última hora, ou quando precisa de confirmação imediata
+- Multibanco (janela de 7 dias):
+  - Melhor para 8+ dias, preferência local PT e pagamento diferido
 
-- **Lembrete Dia 3**: Email de lembrete amigável com 4 dias restantes para pagar
-- **Lembrete Dia 6**: Aviso final urgente com 1 dia restante para pagar
-- **Instruções de Pagamento**: Cada lembrete inclui detalhes completos de pagamento Multibanco e instruções
-- **Métodos de Pagamento**: Pague via ATM, homebanking ou MB WAY (se suportado pelo seu banco)
+## 6) Pagamentos a profissionais (Stripe Connect)
 
-### 3.4 Processamento de Pagamento Atrasado
+- Profissionais são independentes e recebem via Stripe Connect após consultas concluídas
+- Divisão padrão: 85% profissional / 15% plataforma
+- O timing depende das definições do profissional e do banco
 
-Se um pagamento Multibanco for processado após o período de reserva de 7 dias:
+## 7) Moeda e preços
 
-- O sistema verifica automaticamente conflitos de consulta
-- Se o horário de consulta já não estiver disponível ou entrar em conflito com os requisitos de disponibilidade do profissional, será processado um **reembolso parcial**
-- **Estrutura de Reembolso**: 90% do valor do pagamento será reembolsado, com 10% retido como taxa de processamento
+- Preços em EUR; pode haver conversão para cartões internacionais
+- Preços fixos no momento da marcação; sem custos extra após confirmação
+- Impostos/taxas incluídos no preço
 
-## 4. Conflitos de Consulta e Política de Reembolso
+## 8) Segurança e fraude
 
-### 4.1 Deteção de Conflitos
+- Não guardamos números de cartão; Stripe processa (PCI DSS)
+- Cifra e deteção de fraude; transações suspeitas podem atrasar/ser recusadas
+- Verificação adicional pode ser exigida em pagamentos de alto valor
 
-O nosso sistema deteta automaticamente conflitos, incluindo:
+## 9) Pagamentos falhados
 
-- **Conflitos de horário**: Quando outro paciente marcou o mesmo horário ou horário sobreposto
-- **Violações de aviso mínimo**: Quando a consulta já não cumpre os requisitos de aviso mínimo do profissional
-- **Alterações de disponibilidade do profissional**: Quando o profissional já não está disponível no horário marcado
+- Cancelam automaticamente a marcação; notificamos por email
+- Volte a tentar com novo pagamento; falhas repetidas podem restringir temporariamente
 
-### 4.2 Processamento de Reembolsos
+## 10) Suporte e reembolsos
 
-Quando são detetados conflitos devido a pagamentos Multibanco atrasados:
+- Pagamentos: `support@eleva.care` (objetivo de resposta em 24h)
+- Reembolsos: solicite em até 7 dias; emergências médicas caso a caso; cancelamentos conforme os Termos
 
-#### Reembolsos Automáticos
+## 11) Atualizações e conformidade
 
-- **Valor do Reembolso**: 90% do pagamento original
-- **Taxa de Processamento**: 10% do pagamento original (retido)
-- **Tempo de Processamento**: 5-10 dias úteis via Stripe
-- **Notificação**: Notificação automática por email no seu idioma preferido
-
-#### Exemplo de Discriminação de Reembolso
-
-- Pagamento Original: €100,00
-- Valor do Reembolso: €90,00 (90%)
-- Taxa de Processamento: €10,00 (10% - retido)
-
-### 4.3 Resolução Manual
-
-Em casos de erros do sistema ou circunstâncias especiais:
-
-- Contacte a nossa equipa de suporte dentro de 48 horas
-- Forneça a sua referência de pagamento e detalhes da marcação
-- A nossa equipa irá rever e resolver o problema dentro de 2 dias úteis
-
-## 5. Guia de Seleção de Método de Pagamento
-
-### 5.1 Pagamentos com Cartão (Imediato)
-
-**Melhor para:**
-
-- Consultas dentro de 8 dias
-- Necessidade de confirmação imediata
-- Marcações de última hora
-
-**Benefícios:**
-
-- Processamento de pagamento instantâneo
-- Acesso imediato ao link da reunião
-- Sem stress de prazo de pagamento
-
-### 5.2 Pagamentos Multibanco (Janela de 7 Dias)
-
-**Melhor para:**
-
-- Consultas planeadas com bastante antecedência (8+ dias)
-- Residentes portugueses que preferem métodos de pagamento locais
-- Quem se sente confortável com pagamento diferido
-
-**Requisitos:**
-
-- A consulta deve ser marcada com 8+ dias de antecedência
-- O pagamento deve ser completado dentro de 7 dias
-- Acesso a ATM, homebanking ou MB WAY
-
-## 6. Processamento de Pagamentos aos Profissionais
-
-### 6.1 Transferências de Pagamento
-
-**A Eleva.care atua como facilitador de pagamentos entre pacientes e profissionais de saúde independentes:**
-
-- Os profissionais de saúde são profissionais independentes que recebem pagamento pelos seus serviços
-- Os pagamentos são processados através do Stripe Connect
-- Os profissionais recebem 85% da taxa de consulta
-- A Eleva.care retém 15% como taxa de serviço da plataforma (inclui taxas de processamento Stripe)
-- As transferências ocorrem após a conclusão bem-sucedida da consulta
-- O calendário de transferências varia de acordo com as configurações do profissional e requisitos bancários locais
-- Todas as transferências cumprem com as políticas do Stripe Connect e regulamentos locais
-
-### 6.2 Resolução de Disputas
-
-- As disputas de pagamento são tratadas através do processo de resolução de disputas do Stripe
-- Os profissionais de saúde são notificados imediatamente de quaisquer disputas de pagamento
-- Documentação e evidências podem ser necessárias para resolução de disputas
-
-## 7. Moeda e Preços
-
-### 7.1 Moeda Base
-
-- Todos os preços são apresentados em Euros (EUR)
-- Conversão de moeda pode aplicar-se para pagamentos internacionais
-- As taxas de câmbio são determinadas pelos processadores de pagamento no momento da transação
-
-### 7.2 Alterações de Preços
-
-- Os preços das consultas são bloqueados no momento da marcação
-- Não serão aplicados custos adicionais após a confirmação da marcação
-- A taxa de serviço da plataforma de 15% está incluída no preço apresentado
-- Impostos e taxas estão incluídos no preço apresentado
-
-## 8. Segurança de Pagamentos
-
-### 8.1 Proteção de Dados
-
-- Todos os dados de pagamento são processados de forma segura através do Stripe
-- Não armazenamos detalhes de cartões de pagamento nos nossos servidores
-- Todas as transações são encriptadas e cumprem com os padrões PCI DSS
-
-### 8.2 Prevenção de Fraude
-
-- Sistemas automatizados de deteção de fraude estão implementados
-- Transações suspeitas podem ser atrasadas ou recusadas
-- Verificação adicional pode ser necessária para transações de alto valor
-
-## 9. Pagamentos Falhados
-
-### 9.1 Falhas de Pagamento
-
-- Pagamentos falhados resultam em cancelamento automático da consulta
-- Os pacientes são notificados imediatamente por email
-- Novas marcações podem ser feitas com métodos de pagamento válidos
-
-### 9.2 Política de Repetição
-
-- Tentativas automáticas de pagamento não são realizadas
-- Os pacientes devem iniciar novas tentativas de pagamento manualmente
-- Múltiplas tentativas falhadas podem resultar em restrições temporárias de marcação
-
-## 10. Apoio ao Cliente
-
-### 10.1 Problemas de Pagamento
-
-Para questões ou problemas relacionados com pagamentos:
-
-- Email: support@eleva.care
-- Tempo de resposta: Dentro de 24 horas
-- Disponível em vários idiomas (Inglês, Português, Espanhol, Português Brasileiro)
-
-### 10.2 Pedidos de Reembolso
-
-- Os pedidos de reembolso devem ser submetidos dentro de 7 dias da transação original
-- Reembolsos por emergência médica são considerados caso a caso
-- As políticas de cancelamento aplicam-se conforme descrito nos nossos Termos e Condições
-
-## 11. Atualizações de Políticas
-
-Estas políticas de pagamento podem ser atualizadas periodicamente. Os utilizadores serão notificados de alterações significativas por email e notificações da plataforma. A utilização continuada da plataforma constitui aceitação das políticas atualizadas.
-
-## 12. Conformidade Legal
-
-Estas políticas cumprem com:
-
-- Leis portuguesas de proteção do consumidor
-- Regulamentos europeus de serviços de pagamento (PSD2)
-- Requisitos de proteção de dados do RGPD
-- Termos de serviço e padrões de conformidade do Stripe
+- Podemos atualizar estas políticas; o uso contínuo implica aceitação
+- Cumprimos proteção do consumidor PT, PSD2 UE, RGPD e termos da Stripe
 
 ---
 
-_Para questões sobre estas políticas de pagamento, contacte a nossa equipa de suporte em support@eleva.care_
+Dúvidas sobre pagamentos? `support@eleva.care`.
